// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ADS-B normalization parity > matches the approved legacy adsb.fi snapshot 1`] = `
[
  {
    "alt_baro": 35000,
    "alt_geom": 37375,
    "baro_rate": 0,
    "flight": "AAL2314",
    "gs": 460.1,
    "hex": "ab4383",
    "lat": 31.992653,
    "lon": -92.6634,
    "military": false,
    "seen_pos": 0.543,
    "t": "A319",
    "track": 107.84,
  },
  {
    "alt_baro": 36000,
    "alt_geom": 38500,
    "baro_rate": 0,
    "flight": "DAL1222",
    "gs": 473.2,
    "hex": "a3c15d",
    "lat": 31.248596,
    "lon": -92.518939,
    "military": false,
    "seen_pos": 0.478,
    "t": "A321",
    "track": 243.92,
  },
  {
    "alt_baro": 36000,
    "alt_geom": 38425,
    "baro_rate": 0,
    "flight": "SWA4025",
    "gs": 480,
    "hex": "abe8b6",
    "lat": 29.211914,
    "lon": -92.432046,
    "military": false,
    "seen_pos": 0.082,
    "t": "B738",
    "track": 276.46,
  },
  {
    "alt_baro": 35000,
    "alt_geom": 37475,
    "baro_rate": 0,
    "flight": "FFT2886",
    "gs": 472.6,
    "hex": "a8a748",
    "lat": 32.00485,
    "lon": -92.368675,
    "military": false,
    "seen_pos": 0.381,
    "t": "A21N",
    "track": 102.71,
  },
  {
    "alt_baro": 36000,
    "alt_geom": 38475,
    "baro_rate": 0,
    "flight": "AAL1698",
    "gs": 463.8,
    "hex": "a09533",
    "lat": 32.550023,
    "lon": -92.364639,
    "military": false,
    "seen_pos": 0.315,
    "t": "A321",
    "track": 258.18,
  },
  {
    "alt_baro": 38025,
    "alt_geom": 40650,
    "baro_rate": -64,
    "flight": "VOI1893",
    "gs": 460.3,
    "hex": "0d10ec",
    "lat": 32.544157,
    "lon": -92.359258,
    "military": false,
    "seen_pos": 0.581,
    "t": "A320",
    "track": 205.34,
  },
  {
    "alt_baro": 38000,
    "alt_geom": 40575,
    "baro_rate": 0,
    "flight": "SWA4015",
    "gs": 470.5,
    "hex": "a19404",
    "lat": 31.083115,
    "lon": -92.28653,
    "military": false,
    "seen_pos": 0.315,
    "t": "B737",
    "track": 296.24,
  },
  {
    "alt_baro": 36000,
    "alt_geom": 38525,
    "baro_rate": 64,
    "flight": "DAL2051",
    "gs": 479.8,
    "hex": "a3c9b4",
    "lat": 31.301632,
    "lon": -92.221381,
    "military": false,
    "seen_pos": 0,
    "t": "A320",
    "track": 240.12,
  },
  {
    "alt_baro": 41000,
    "alt_geom": 43625,
    "baro_rate": 0,
    "flight": "SWA1937",
    "gs": 449.1,
    "hex": "abb5e2",
    "lat": 32.037506,
    "lon": -92.200342,
    "military": false,
    "seen_pos": 0.315,
    "t": "B738",
    "track": 99.48,
  },
  {
    "alt_baro": 35975,
    "alt_geom": 38400,
    "baro_rate": 0,
    "flight": "JBU607",
    "gs": 472.4,
    "hex": "adc9b6",
    "lat": 29.462769,
    "lon": -92.032418,
    "military": false,
    "seen_pos": 0.297,
    "t": "A321",
    "track": 281.48,
  },
  {
    "alt_baro": 24800,
    "alt_geom": 26525,
    "baro_rate": 768,
    "flight": "UAL2194",
    "gs": 488,
    "hex": "a81006",
    "lat": 31.003092,
    "lon": -92.023022,
    "military": false,
    "seen_pos": 0,
    "t": "B739",
    "track": 287.66,
  },
  {
    "alt_baro": 31600,
    "alt_geom": 33800,
    "baro_rate": 1344,
    "flight": "SWA4677",
    "gs": 484.7,
    "hex": "abd50f",
    "lat": 31.073318,
    "lon": -91.813444,
    "military": false,
    "seen_pos": 0.151,
    "t": "B738",
    "track": 290.15,
  },
  {
    "alt_baro": 34000,
    "alt_geom": 36400,
    "baro_rate": null,
    "flight": "JIA5222",
    "gs": 466.2,
    "hex": "a6d857",
    "lat": 32.573578,
    "lon": -91.728889,
    "military": false,
    "seen_pos": 0.315,
    "t": "CRJ7",
    "track": 233.55,
  },
  {
    "alt_baro": 36000,
    "alt_geom": 38525,
    "baro_rate": 0,
    "flight": "FFT3097",
    "gs": 461.6,
    "hex": "a8d635",
    "lat": 32.583023,
    "lon": -91.589941,
    "military": false,
    "seen_pos": 0.115,
    "t": "A21N",
    "track": 260.27,
  },
  {
    "alt_baro": 17900,
    "alt_geom": 19150,
    "baro_rate": null,
    "flight": "N111WH",
    "gs": 479.1,
    "hex": "a031e6",
    "lat": 30.205399,
    "lon": -91.302903,
    "military": false,
    "seen_pos": 0.381,
    "t": "FA10",
    "track": 138.89,
  },
  {
    "alt_baro": 35025,
    "alt_geom": 37425,
    "baro_rate": 0,
    "flight": "FFT4978",
    "gs": 450.6,
    "hex": "a9af3e",
    "lat": 29.438192,
    "lon": -91.210812,
    "military": false,
    "seen_pos": 0.212,
    "t": "A321",
    "track": 103.6,
  },
  {
    "alt_baro": 37000,
    "alt_geom": 39475,
    "baro_rate": 0,
    "flight": "UAL1591",
    "gs": 438,
    "hex": "a2c336",
    "lat": 33.425717,
    "lon": -91.184281,
    "military": false,
    "seen_pos": 0.279,
    "t": "B737",
    "track": 56.93,
  },
  {
    "alt_baro": 16800,
    "alt_geom": 17950,
    "baro_rate": -1792,
    "flight": "ENY3868",
    "gs": 382.5,
    "hex": "a2ba48",
    "lat": 32.484879,
    "lon": -91.182568,
    "military": false,
    "seen_pos": 0.279,
    "t": "E75L",
    "track": 92.85,
  },
  {
    "alt_baro": 36000,
    "alt_geom": 38450,
    "baro_rate": 0,
    "flight": "SWA2634",
    "gs": 472,
    "hex": "abb245",
    "lat": 31.047596,
    "lon": -91.118683,
    "military": false,
    "seen_pos": 0.315,
    "t": "B738",
    "track": 301.13,
  },
  {
    "alt_baro": 12125,
    "alt_geom": 12900,
    "baro_rate": -960,
    "flight": "SWA878",
    "gs": 383.1,
    "hex": "a1b1bc",
    "lat": 30.235911,
    "lon": -91.059851,
    "military": false,
    "seen_pos": 0.082,
    "t": "B737",
    "track": 139.66,
  },
  {
    "alt_baro": 36000,
    "alt_geom": 38450,
    "baro_rate": 0,
    "flight": "AAL2629",
    "gs": 470.5,
    "hex": "a777bf",
    "lat": 28.951538,
    "lon": -90.959032,
    "military": false,
    "seen_pos": 0.152,
    "t": "A321",
    "track": 281.52,
  },
  {
    "alt_baro": 35000,
    "alt_geom": 37425,
    "baro_rate": 0,
    "flight": "AAL364",
    "gs": 449.6,
    "hex": "a78a52",
    "lat": 30.506194,
    "lon": -90.937134,
    "military": false,
    "seen_pos": 0.185,
    "t": "A321",
    "track": 128.68,
  },
  {
    "alt_baro": 34000,
    "alt_geom": 36375,
    "baro_rate": 0,
    "flight": "ENY557G",
    "gs": 456,
    "hex": "a23c5d",
    "lat": 32.809616,
    "lon": -90.896045,
    "military": false,
    "seen_pos": 0.873,
    "t": "E75L",
    "track": 258.62,
  },
  {
    "alt_baro": 33000,
    "alt_geom": 35175,
    "baro_rate": 0,
    "flight": "ENY4064",
    "gs": 469.1,
    "hex": "a3d3b3",
    "lat": 33.422516,
    "lon": -90.818097,
    "military": false,
    "seen_pos": 0.132,
    "t": null,
    "track": 84.62,
  },
  {
    "alt_baro": 30000,
    "alt_geom": 32125,
    "baro_rate": 0,
    "flight": "DAL1081",
    "gs": 464.9,
    "hex": "a417c9",
    "lat": 31.440823,
    "lon": -90.693732,
    "military": false,
    "seen_pos": 0.18,
    "t": "A321",
    "track": 238.63,
  },
  {
    "alt_baro": 31000,
    "alt_geom": 33175,
    "baro_rate": null,
    "flight": "JIA5267",
    "gs": 486,
    "hex": "a87cbe",
    "lat": 33.394501,
    "lon": -90.522949,
    "military": false,
    "seen_pos": 0.299,
    "t": "CRJ9",
    "track": 86.34,
  },
  {
    "alt_baro": 38000,
    "alt_geom": 40550,
    "baro_rate": 0,
    "flight": "SWA888",
    "gs": 475.3,
    "hex": "ac0c24",
    "lat": 29.547134,
    "lon": -90.508223,
    "military": false,
    "seen_pos": 0.18,
    "t": "B38M",
    "track": 267.95,
  },
  {
    "alt_baro": 35000,
    "alt_geom": 37425,
    "baro_rate": 0,
    "flight": "DAL1223",
    "gs": 453.6,
    "hex": "a3dc47",
    "lat": 30.670258,
    "lon": -90.481244,
    "military": false,
    "seen_pos": 0.149,
    "t": "A320",
    "track": 75.44,
  },
  {
    "alt_baro": 36000,
    "alt_geom": 38475,
    "baro_rate": 0,
    "flight": "FFT2745",
    "gs": 444.3,
    "hex": "a44e59",
    "lat": 34.041779,
    "lon": -90.456605,
    "military": false,
    "seen_pos": 0.299,
    "t": "A20N",
    "track": 298.35,
  },
  {
    "alt_baro": 33000,
    "alt_geom": 35275,
    "baro_rate": 0,
    "flight": "AAY1280",
    "gs": 476.1,
    "hex": "ab44ae",
    "lat": 33.895889,
    "lon": -90.401505,
    "military": false,
    "seen_pos": 0.246,
    "t": "B38M",
    "track": 114.84,
  },
  {
    "alt_baro": 25950,
    "alt_geom": 27750,
    "baro_rate": 1280,
    "flight": "SWA1122",
    "gs": 459.2,
    "hex": "ac3e13",
    "lat": 33.677379,
    "lon": -90.332794,
    "military": false,
    "seen_pos": 0.24,
    "t": "B38M",
    "track": 228.71,
  },
  {
    "alt_baro": 35025,
    "alt_geom": 37475,
    "baro_rate": 0,
    "flight": "AAL2974",
    "gs": 459.1,
    "hex": "a10bbc",
    "lat": 30.053473,
    "lon": -90.322394,
    "military": false,
    "seen_pos": 0.315,
    "t": "A321",
    "track": 139.86,
  },
  {
    "alt_baro": 36000,
    "alt_geom": 38350,
    "baro_rate": 0,
    "flight": "SKW4095",
    "gs": 443.2,
    "hex": "a2dac7",
    "lat": 33.455795,
    "lon": -90.321954,
    "military": false,
    "seen_pos": 0.24,
    "t": "E75L",
    "track": 258.94,
  },
  {
    "alt_baro": 2675,
    "alt_geom": 2800,
    "baro_rate": null,
    "flight": "N836CS",
    "gs": 129.9,
    "hex": "ab6ee7",
    "lat": 32.161079,
    "lon": -90.314175,
    "military": false,
    "seen_pos": 0.772,
    "t": "EC35",
    "track": 35.28,
  },
  {
    "alt_baro": 2800,
    "alt_geom": 2875,
    "baro_rate": null,
    "flight": "N3072D",
    "gs": 98.1,
    "hex": "a33bf5",
    "lat": 30.516174,
    "lon": -90.28823,
    "military": false,
    "seen_pos": 0.476,
    "t": "P28A",
    "track": 106.59,
  },
  {
    "alt_baro": 800,
    "alt_geom": 825,
    "baro_rate": -768,
    "flight": "UAL2042",
    "gs": 147.3,
    "hex": "a2b7cd",
    "lat": 29.978338,
    "lon": -90.205939,
    "military": false,
    "seen_pos": 21.205,
    "t": "B39M",
    "track": 285.36,
  },
  {
    "alt_baro": 36000,
    "alt_geom": 38475,
    "baro_rate": 0,
    "flight": "AAL434",
    "gs": 462.5,
    "hex": "acdfa6",
    "lat": 31.845062,
    "lon": -90.091516,
    "military": false,
    "seen_pos": 0.088,
    "t": "B738",
    "track": 250.15,
  },
  {
    "alt_baro": 29000,
    "alt_geom": 30950,
    "baro_rate": 0,
    "flight": "ENY3619",
    "gs": 472.7,
    "hex": "a29a37",
    "lat": 31.568376,
    "lon": -90.062567,
    "military": false,
    "seen_pos": 0.279,
    "t": "E75L",
    "track": 103.33,
  },
  {
    "alt_baro": 1325,
    "alt_geom": 1325,
    "baro_rate": null,
    "flight": "JIA5566",
    "gs": 140.4,
    "hex": "a7e279",
    "lat": 32.243912,
    "lon": -90.050153,
    "military": false,
    "seen_pos": 0.772,
    "t": "CRJ9",
    "track": 337.82,
  },
  {
    "alt_baro": 3525,
    "alt_geom": 3700,
    "baro_rate": -768,
    "flight": "UCA4334",
    "gs": 216,
    "hex": "a0339f",
    "lat": 32.158997,
    "lon": -90.010876,
    "military": false,
    "seen_pos": 0.279,
    "t": "E45X",
    "track": 9.59,
  },
  {
    "alt_baro": 43000,
    "alt_geom": 45575,
    "baro_rate": null,
    "flight": "LXJ433",
    "gs": 458.5,
    "hex": "a52ed6",
    "lat": 32.706811,
    "lon": -89.975281,
    "military": false,
    "seen_pos": 0.088,
    "t": "E545",
    "track": 236.66,
  },
  {
    "alt_baro": 36000,
    "alt_geom": 38400,
    "baro_rate": 0,
    "flight": "UAL1872",
    "gs": 474.2,
    "hex": "aa2b79",
    "lat": 29.153106,
    "lon": -89.93419,
    "military": false,
    "seen_pos": 0.103,
    "t": "B739",
    "track": 278.49,
  },
  {
    "alt_baro": 3075,
    "alt_geom": 3125,
    "baro_rate": -512,
    "flight": "N10958",
    "gs": 100.5,
    "hex": "a0294b",
    "lat": 34.190643,
    "lon": -89.773883,
    "military": false,
    "seen_pos": 37.669,
    "t": null,
    "track": 279.74,
  },
  {
    "alt_baro": 14250,
    "alt_geom": 15175,
    "baro_rate": -1920,
    "flight": "UCA4337",
    "gs": 386.6,
    "hex": "a05ad4",
    "lat": 29.992396,
    "lon": -89.767639,
    "military": false,
    "seen_pos": 0.292,
    "t": "E45X",
    "track": 55.86,
  },
  {
    "alt_baro": 33975,
    "alt_geom": 36325,
    "baro_rate": 0,
    "flight": "DAL1104",
    "gs": 443.9,
    "hex": "ac66d5",
    "lat": 32.843765,
    "lon": -89.709906,
    "military": false,
    "seen_pos": 0.054,
    "t": "B712",
    "track": 261.45,
  },
  {
    "alt_baro": 26550,
    "alt_geom": 28400,
    "baro_rate": null,
    "flight": "JIA5454",
    "gs": 458.5,
    "hex": "a7db0b",
    "lat": 31.443146,
    "lon": -89.704285,
    "military": false,
    "seen_pos": 0.18,
    "t": "CRJ9",
    "track": 219.07,
  },
  {
    "alt_baro": 27950,
    "alt_geom": 29925,
    "baro_rate": 1536,
    "flight": "SWA2071",
    "gs": 467.3,
    "hex": "a56e0d",
    "lat": 31.044244,
    "lon": -89.599329,
    "military": false,
    "seen_pos": 0,
    "t": "B737",
    "track": 30.9,
  },
  {
    "alt_baro": 37000,
    "alt_geom": 39525,
    "baro_rate": 0,
    "flight": "UAL1961",
    "gs": 487.8,
    "hex": "a5cc11",
    "lat": 32.693573,
    "lon": -89.539783,
    "military": false,
    "seen_pos": 0.279,
    "t": "B38M",
    "track": 121.93,
  },
  {
    "alt_baro": 32000,
    "alt_geom": 34200,
    "baro_rate": 64,
    "flight": "ASH6156",
    "gs": 472.8,
    "hex": "abdc91",
    "lat": 32.714725,
    "lon": -89.344296,
    "military": false,
    "seen_pos": 0.289,
    "t": "E75L",
    "track": 242.41,
  },
  {
    "alt_baro": 37000,
    "alt_geom": 39475,
    "baro_rate": 0,
    "flight": "AAL1267",
    "gs": 443.5,
    "hex": "ac390f",
    "lat": 29.273666,
    "lon": -89.318848,
    "military": false,
    "seen_pos": 4.964,
    "t": "B738",
    "track": 125.73,
  },
  {
    "alt_baro": 31000,
    "alt_geom": 33100,
    "baro_rate": null,
    "flight": "SKW5094",
    "gs": 436.2,
    "hex": "ad3dba",
    "lat": 32.752525,
    "lon": -89.305003,
    "military": false,
    "seen_pos": 0.772,
    "t": "CRJ2",
    "track": 64.9,
  },
  {
    "alt_baro": 34000,
    "alt_geom": 36325,
    "baro_rate": 0,
    "flight": "FFT3311",
    "gs": 446.3,
    "hex": "a21432",
    "lat": 33.166122,
    "lon": -89.28078,
    "military": false,
    "seen_pos": 0.538,
    "t": "A320",
    "track": 289.77,
  },
  {
    "alt_baro": 37000,
    "alt_geom": 39400,
    "baro_rate": 0,
    "flight": "SWA277",
    "gs": 463.6,
    "hex": "abe7e3",
    "lat": 34.400208,
    "lon": -89.236226,
    "military": false,
    "seen_pos": 0.299,
    "t": "B738",
    "track": 80.31,
  },
  {
    "alt_baro": 34000,
    "alt_geom": 36325,
    "baro_rate": 0,
    "flight": "UAL2215",
    "gs": 462.8,
    "hex": "a9b4de",
    "lat": 28.993525,
    "lon": -89.223148,
    "military": false,
    "seen_pos": 0.149,
    "t": "B739",
    "track": 283.5,
  },
  {
    "alt_baro": 34975,
    "alt_geom": 37350,
    "baro_rate": 0,
    "flight": "FFT1418",
    "gs": 444.1,
    "hex": "a967ae",
    "lat": 28.977092,
    "lon": -89.145975,
    "military": false,
    "seen_pos": 2.689,
    "t": "A321",
    "track": 103.41,
  },
  {
    "alt_baro": 31000,
    "alt_geom": 33125,
    "baro_rate": -64,
    "flight": "AAL2844",
    "gs": 448.4,
    "hex": "a8a6d0",
    "lat": 30.683837,
    "lon": -89.114832,
    "military": false,
    "seen_pos": 0.046,
    "t": "A320",
    "track": 85.52,
  },
  {
    "alt_baro": 33000,
    "alt_geom": 35200,
    "baro_rate": 64,
    "flight": "UAE2VL",
    "gs": 507.7,
    "hex": "89647f",
    "lat": 33.901667,
    "lon": -89.114628,
    "military": false,
    "seen_pos": 0.313,
    "t": "A388",
    "track": 66.06,
  },
  {
    "alt_baro": 29000,
    "alt_geom": 31025,
    "baro_rate": 0,
    "flight": "AAL2673",
    "gs": 472.5,
    "hex": "ac72f0",
    "lat": 31.347427,
    "lon": -89.061961,
    "military": false,
    "seen_pos": 0.29,
    "t": "B738",
    "track": 103.71,
  },
  {
    "alt_baro": 33000,
    "alt_geom": 35200,
    "baro_rate": 0,
    "flight": "UCA4343",
    "gs": 462.3,
    "hex": "a23675",
    "lat": 30.639954,
    "lon": -88.739373,
    "military": false,
    "seen_pos": 0.418,
    "t": "E45X",
    "track": 75.21,
  },
  {
    "alt_baro": 35000,
    "alt_geom": 37425,
    "baro_rate": 0,
    "flight": "FFT2400",
    "gs": 464.7,
    "hex": "a8e3b3",
    "lat": 31.343948,
    "lon": -88.633081,
    "military": false,
    "seen_pos": 0.418,
    "t": "A21N",
    "track": 75.55,
  },
  {
    "alt_baro": 10050,
    "alt_geom": 10650,
    "baro_rate": null,
    "flight": "N5679P",
    "gs": 146.8,
    "hex": "a7448c",
    "lat": 33.786218,
    "lon": -88.563652,
    "military": false,
    "seen_pos": 0.538,
    "t": "PA24",
    "track": 257.01,
  },
  {
    "alt_baro": 31000,
    "alt_geom": 33125,
    "baro_rate": 0,
    "flight": "UAL1444",
    "gs": 460.7,
    "hex": "ac0831",
    "lat": 31.129156,
    "lon": -88.498718,
    "military": false,
    "seen_pos": 0.351,
    "t": "B39M",
    "track": 77.08,
  },
  {
    "alt_baro": 34000,
    "alt_geom": 36250,
    "baro_rate": 0,
    "flight": "DAL1531",
    "gs": 449.1,
    "hex": "acc23f",
    "lat": 34.017955,
    "lon": -88.457966,
    "military": false,
    "seen_pos": 0.033,
    "t": "B739",
    "track": 273.96,
  },
  {
    "alt_baro": 29000,
    "alt_geom": 30950,
    "baro_rate": -64,
    "flight": "AAL813",
    "gs": 472.3,
    "hex": "ab5fdd",
    "lat": 31.257686,
    "lon": -88.452795,
    "military": false,
    "seen_pos": 0.253,
    "t": "A319",
    "track": 105.1,
  },
  {
    "alt_baro": 35000,
    "alt_geom": 37350,
    "baro_rate": 0,
    "flight": "CAL5382",
    "gs": 479.6,
    "hex": "8990a5",
    "lat": 28.687866,
    "lon": -88.439889,
    "military": false,
    "seen_pos": 0.826,
    "t": "B77L",
    "track": 130.26,
  },
  {
    "alt_baro": 30000,
    "alt_geom": 32125,
    "baro_rate": 0,
    "flight": "DAL3111",
    "gs": 471.9,
    "hex": "adc180",
    "lat": 32.299438,
    "lon": -88.421484,
    "military": false,
    "seen_pos": 0.443,
    "t": "B712",
    "track": 244.25,
  },
  {
    "alt_baro": 10975,
    "alt_geom": 11650,
    "baro_rate": -448,
    "flight": "SCX8218",
    "gs": 385.5,
    "hex": "ab88ee",
    "lat": 30.706558,
    "lon": -88.403213,
    "military": false,
    "seen_pos": 0.29,
    "t": "B738",
    "track": 243.5,
  },
  {
    "alt_baro": 29000,
    "alt_geom": 30900,
    "baro_rate": -64,
    "flight": "ASH6206",
    "gs": 449.2,
    "hex": "ac0418",
    "lat": 33.847573,
    "lon": -88.384895,
    "military": false,
    "seen_pos": 0.224,
    "t": "E75L",
    "track": 66.52,
  },
  {
    "alt_baro": 36000,
    "alt_geom": 38450,
    "baro_rate": 0,
    "flight": "SWA4583",
    "gs": 481.4,
    "hex": "ac4ffb",
    "lat": 28.706085,
    "lon": -88.340167,
    "military": false,
    "seen_pos": 2.887,
    "t": "B38M",
    "track": 279.33,
  },
  {
    "alt_baro": 525,
    "alt_geom": 475,
    "baro_rate": -384,
    "flight": "N248BL",
    "gs": 92.1,
    "hex": "a24ddb",
    "lat": 30.715256,
    "lon": -88.264806,
    "military": false,
    "seen_pos": 33.433,
    "t": "DA40",
    "track": 145.62,
  },
  {
    "alt_baro": 36000,
    "alt_geom": 38425,
    "baro_rate": 0,
    "flight": "UAL1066",
    "gs": 434.9,
    "hex": "ab97e6",
    "lat": 33.406998,
    "lon": -88.241858,
    "military": false,
    "seen_pos": 0.054,
    "t": "A319",
    "track": 240.37,
  },
  {
    "alt_baro": 29000,
    "alt_geom": 31050,
    "baro_rate": 0,
    "flight": "AAL2206",
    "gs": 474.6,
    "hex": "a0f73c",
    "lat": 29.089737,
    "lon": -88.178805,
    "military": false,
    "seen_pos": 1.086,
    "t": "A321",
    "track": 120.24,
  },
  {
    "alt_baro": 33975,
    "alt_geom": 36275,
    "baro_rate": -64,
    "flight": "AAL3036",
    "gs": 441.5,
    "hex": "ad36c8",
    "lat": 33.817978,
    "lon": -88.071003,
    "military": false,
    "seen_pos": 0.24,
    "t": "A21N",
    "track": 272.73,
  },
  {
    "alt_baro": 36000,
    "alt_geom": 38400,
    "baro_rate": 0,
    "flight": "AAL2541",
    "gs": 452.1,
    "hex": "adb29f",
    "lat": 30.13047,
    "lon": -88.035205,
    "military": false,
    "seen_pos": 0.091,
    "t": "B738",
    "track": 284.34,
  },
  {
    "alt_baro": 37000,
    "alt_geom": 39500,
    "baro_rate": null,
    "flight": "AMX001",
    "gs": 483.8,
    "hex": "0d08d1",
    "lat": 31.366013,
    "lon": -88.024292,
    "military": false,
    "seen_pos": 0.421,
    "t": "B789",
    "track": 52.73,
  },
  {
    "alt_baro": 33900,
    "alt_geom": 36100,
    "baro_rate": -960,
    "flight": "AAL2391",
    "gs": 476,
    "hex": "a3d4ed",
    "lat": 34.73323,
    "lon": -88.015652,
    "military": false,
    "seen_pos": 0.466,
    "t": "B738",
    "track": 101.76,
  },
  {
    "alt_baro": 36000,
    "alt_geom": 38375,
    "baro_rate": -64,
    "flight": "ROU1889",
    "gs": 471.8,
    "hex": "c05044",
    "lat": 34.117344,
    "lon": -88.00827,
    "military": false,
    "seen_pos": 0.403,
    "t": "B38M",
    "track": 218.55,
  },
  {
    "alt_baro": 36000,
    "alt_geom": 38400,
    "baro_rate": -64,
    "flight": "SWA1696",
    "gs": 483.2,
    "hex": "abd135",
    "lat": 28.626833,
    "lon": -88.007382,
    "military": false,
    "seen_pos": 6.312,
    "t": "B738",
    "track": 279.89,
  },
  {
    "alt_baro": 34000,
    "alt_geom": 36275,
    "baro_rate": 0,
    "flight": "AAL2799",
    "gs": 482.7,
    "hex": "a35e9c",
    "lat": 28.095626,
    "lon": -87.898865,
    "military": false,
    "seen_pos": 2.876,
    "t": "B38M",
    "track": 299.54,
  },
  {
    "alt_baro": 31000,
    "alt_geom": 33125,
    "baro_rate": 0,
    "flight": "UAL2293",
    "gs": 421.1,
    "hex": "a445ee",
    "lat": 30.757808,
    "lon": -87.863489,
    "military": false,
    "seen_pos": 0.253,
    "t": "B739",
    "track": 85.91,
  },
  {
    "alt_baro": 39025,
    "alt_geom": 41475,
    "baro_rate": 64,
    "flight": "AAY2651",
    "gs": 469.4,
    "hex": "a37e6c",
    "lat": 34.630554,
    "lon": -87.832723,
    "military": false,
    "seen_pos": 0.525,
    "t": "A319",
    "track": 149.39,
  },
  {
    "alt_baro": 36975,
    "alt_geom": 39425,
    "baro_rate": -64,
    "flight": "VIV686",
    "gs": 436.7,
    "hex": "0d12ac",
    "lat": 31.4067,
    "lon": -87.760547,
    "military": false,
    "seen_pos": 0.418,
    "t": "A20N",
    "track": 57.91,
  },
  {
    "alt_baro": 37000,
    "alt_geom": 39450,
    "baro_rate": 0,
    "flight": "AAL1316",
    "gs": 458.6,
    "hex": "ad2fd0",
    "lat": 34.568994,
    "lon": -87.755356,
    "military": false,
    "seen_pos": 0.306,
    "t": "B738",
    "track": 82.86,
  },
  {
    "alt_baro": 6500,
    "alt_geom": 6775,
    "baro_rate": -64,
    "flight": "N8089E",
    "gs": 105.4,
    "hex": "ab032d",
    "lat": 30.596645,
    "lon": -87.627667,
    "military": false,
    "seen_pos": 0.418,
    "t": "C172",
    "track": 274.9,
  },
  {
    "alt_baro": 37000,
    "alt_geom": 39500,
    "baro_rate": 0,
    "flight": "AAL1837",
    "gs": 473.5,
    "hex": "ad928e",
    "lat": 31.543625,
    "lon": -87.581177,
    "military": false,
    "seen_pos": 0.351,
    "t": "B738",
    "track": 113.26,
  },
  {
    "alt_baro": 3500,
    "alt_geom": 3675,
    "baro_rate": -320,
    "flight": "BB257",
    "gs": 179.7,
    "hex": "ae58f6",
    "lat": 30.763255,
    "lon": -87.575537,
    "military": true,
    "seen_pos": 0.351,
    "t": "TEX2",
    "track": 73.18,
  },
  {
    "alt_baro": 25500,
    "alt_geom": 27250,
    "baro_rate": 576,
    "flight": "DAL896",
    "gs": 487.3,
    "hex": "a4a0d9",
    "lat": 34.029919,
    "lon": -87.575397,
    "military": false,
    "seen_pos": 0.153,
    "t": "A321",
    "track": 279.21,
  },
  {
    "alt_baro": 5900,
    "alt_geom": 6200,
    "baro_rate": -512,
    "flight": "N208LS",
    "gs": 160.1,
    "hex": "a1b0c6",
    "lat": 30.51622,
    "lon": -87.558989,
    "military": false,
    "seen_pos": 4.077,
    "t": "C208",
    "track": 284.47,
  },
  {
    "alt_baro": 31000,
    "alt_geom": 33125,
    "baro_rate": 64,
    "flight": "SWA2986",
    "gs": 476.3,
    "hex": "ac36cc",
    "lat": 31.459213,
    "lon": -87.458227,
    "military": false,
    "seen_pos": 0.104,
    "t": "B38M",
    "track": 54.14,
  },
  {
    "alt_baro": 40025,
    "alt_geom": 42375,
    "baro_rate": 64,
    "flight": "GTI9371",
    "gs": 461.2,
    "hex": "a86d51",
    "lat": 28.926723,
    "lon": -87.40238,
    "military": false,
    "seen_pos": 0.429,
    "t": "B763",
    "track": 292.84,
  },
  {
    "alt_baro": 35000,
    "alt_geom": 37275,
    "baro_rate": 0,
    "flight": "AAY2845",
    "gs": 494.6,
    "hex": "ab120a",
    "lat": 34.687422,
    "lon": -87.387371,
    "military": false,
    "seen_pos": 0.224,
    "t": "B38M",
    "track": 142.81,
  },
  {
    "alt_baro": 35000,
    "alt_geom": 37275,
    "baro_rate": null,
    "flight": "EDV4967",
    "gs": 464.3,
    "hex": "accf1c",
    "lat": 33.5354,
    "lon": -87.35191,
    "military": false,
    "seen_pos": 0.13,
    "t": "CRJ9",
    "track": 70.24,
  },
  {
    "alt_baro": 36000,
    "alt_geom": 38325,
    "baro_rate": 64,
    "flight": "DAL825",
    "gs": 437.4,
    "hex": "a939e8",
    "lat": 33.934937,
    "lon": -87.329874,
    "military": false,
    "seen_pos": 0.192,
    "t": "B752",
    "track": 281.88,
  },
  {
    "alt_baro": 39000,
    "alt_geom": 41475,
    "baro_rate": 0,
    "flight": "UAL2323",
    "gs": 439.7,
    "hex": "a3cf6d",
    "lat": 28.467636,
    "lon": -87.18095,
    "military": false,
    "seen_pos": 0.104,
    "t": "B739",
    "track": 106.79,
  },
  {
    "alt_baro": 41000,
    "alt_geom": 43500,
    "baro_rate": 0,
    "flight": "SWA4619",
    "gs": 485.6,
    "hex": "ac3751",
    "lat": 32.436676,
    "lon": -87.113947,
    "military": false,
    "seen_pos": 0.032,
    "t": "B38M",
    "track": 129.82,
  },
  {
    "alt_baro": 31000,
    "alt_geom": 33075,
    "baro_rate": 0,
    "flight": "ASH4033",
    "gs": 455,
    "hex": "ac2c23",
    "lat": 31.643465,
    "lon": -87.05907,
    "military": false,
    "seen_pos": 0.104,
    "t": "E75L",
    "track": 53.13,
  },
  {
    "alt_baro": 38000,
    "alt_geom": 40425,
    "baro_rate": 0,
    "flight": "SWA4630",
    "gs": 484.8,
    "hex": "abdc78",
    "lat": 33.190796,
    "lon": -87.031384,
    "military": false,
    "seen_pos": 0.386,
    "t": "B738",
    "track": 184.97,
  },
  {
    "alt_baro": 3475,
    "alt_geom": 3575,
    "baro_rate": 64,
    "flight": "N514RB",
    "gs": 99.7,
    "hex": "a671c4",
    "lat": 30.346706,
    "lon": -86.990845,
    "military": false,
    "seen_pos": 0.429,
    "t": "C172",
    "track": 83.09,
  },
  {
    "alt_baro": 36000,
    "alt_geom": 38325,
    "baro_rate": 0,
    "flight": "SWA2888",
    "gs": 427.8,
    "hex": "abd19e",
    "lat": 34.049423,
    "lon": -86.938514,
    "military": false,
    "seen_pos": 0.377,
    "t": "B738",
    "track": 323.08,
  },
  {
    "alt_baro": 29650,
    "alt_geom": 31575,
    "baro_rate": 1408,
    "flight": "DAL903",
    "gs": 463.5,
    "hex": "acc9b2",
    "lat": 34.129494,
    "lon": -86.918964,
    "military": false,
    "seen_pos": 0.224,
    "t": "B739",
    "track": 290.19,
  },
  {
    "alt_baro": 4875,
    "alt_geom": 5125,
    "baro_rate": -960,
    "flight": "DAL3145",
    "gs": 286.2,
    "hex": "ad0373",
    "lat": 33.739945,
    "lon": -86.818428,
    "military": false,
    "seen_pos": 0.328,
    "t": "B712",
    "track": 143.81,
  },
  {
    "alt_baro": 27000,
    "alt_geom": 28750,
    "baro_rate": null,
    "flight": "EJM132",
    "gs": 469.1,
    "hex": "a88d55",
    "lat": 34.362122,
    "lon": -86.712734,
    "military": false,
    "seen_pos": 0.192,
    "t": "CL60",
    "track": 106.85,
  },
  {
    "alt_baro": 9975,
    "alt_geom": 10600,
    "baro_rate": -128,
    "flight": "SH197",
    "gs": 256.1,
    "hex": "ae4eaf",
    "lat": 31.507439,
    "lon": -86.663892,
    "military": true,
    "seen_pos": 0.744,
    "t": "TEX2",
    "track": 181.57,
  },
  {
    "alt_baro": 16100,
    "alt_geom": 16875,
    "baro_rate": null,
    "flight": "N11AW",
    "gs": 247.3,
    "hex": "a029ef",
    "lat": 31.554153,
    "lon": -86.640445,
    "military": false,
    "seen_pos": 1.455,
    "t": "LNP4",
    "track": 356.99,
  },
  {
    "alt_baro": 35000,
    "alt_geom": 37300,
    "baro_rate": 0,
    "flight": "ENY3939",
    "gs": 500.2,
    "hex": "a21839",
    "lat": 32.337433,
    "lon": -86.561169,
    "military": false,
    "seen_pos": 0.496,
    "t": "E75L",
    "track": 133.14,
  },
  {
    "alt_baro": 32000,
    "alt_geom": 34150,
    "baro_rate": 0,
    "flight": "SWA5067",
    "gs": 499.2,
    "hex": "ac252a",
    "lat": 28.613022,
    "lon": -86.477139,
    "military": false,
    "seen_pos": 0.104,
    "t": "B38M",
    "track": 278.29,
  },
  {
    "alt_baro": 3900,
    "alt_geom": 4100,
    "baro_rate": -1728,
    "flight": "DAL2257",
    "gs": 265.2,
    "hex": "a7d276",
    "lat": 33.631199,
    "lon": -86.465435,
    "military": false,
    "seen_pos": 1.318,
    "t": "B712",
    "track": 277.37,
  },
  {
    "alt_baro": 34000,
    "alt_geom": 36275,
    "baro_rate": null,
    "flight": "JIA5230",
    "gs": 471.5,
    "hex": "a6dfbf",
    "lat": 34.017396,
    "lon": -86.428585,
    "military": false,
    "seen_pos": 0.377,
    "t": "CRJ7",
    "track": 231.11,
  },
  {
    "alt_baro": 21000,
    "alt_geom": 22325,
    "baro_rate": -1536,
    "flight": "ECJ80",
    "gs": 453.9,
    "hex": "aae2f1",
    "lat": 31.650168,
    "lon": -86.426807,
    "military": false,
    "seen_pos": 0.429,
    "t": "H25B",
    "track": 220.53,
  },
  {
    "alt_baro": 14325,
    "alt_geom": 15175,
    "baro_rate": null,
    "flight": "JIA5077",
    "gs": 352.7,
    "hex": "a697cf",
    "lat": 33.400909,
    "lon": -86.373523,
    "military": false,
    "seen_pos": 0.647,
    "t": "CRJ7",
    "track": 100.29,
  },
  {
    "alt_baro": 41000,
    "alt_geom": 43450,
    "baro_rate": 0,
    "flight": "SWA286",
    "gs": 476,
    "hex": "abeb57",
    "lat": 34.186334,
    "lon": -86.345329,
    "military": false,
    "seen_pos": 0.196,
    "t": "B738",
    "track": 133.72,
  },
  {
    "alt_baro": 43000,
    "alt_geom": 45450,
    "baro_rate": 0,
    "flight": "EJA941",
    "gs": 437.3,
    "hex": "ad124e",
    "lat": 28.204468,
    "lon": -86.328665,
    "military": false,
    "seen_pos": 0.759,
    "t": "C68A",
    "track": 288.39,
  },
  {
    "alt_baro": 27575,
    "alt_geom": 29425,
    "baro_rate": 896,
    "flight": "FFT4075",
    "gs": 431.2,
    "hex": "a85c01",
    "lat": 33.330937,
    "lon": -86.324064,
    "military": false,
    "seen_pos": 0.153,
    "t": "A21N",
    "track": 249.93,
  },
  {
    "alt_baro": 6000,
    "alt_geom": 6250,
    "baro_rate": 0,
    "flight": "N16GH",
    "gs": 119,
    "hex": "a0eff3",
    "lat": 34.535934,
    "lon": -86.302204,
    "military": false,
    "seen_pos": 0.033,
    "t": null,
    "track": 172.76,
  },
  {
    "alt_baro": 31000,
    "alt_geom": 33050,
    "baro_rate": 0,
    "flight": "AAL1824",
    "gs": 460.1,
    "hex": "a58fdf",
    "lat": 27.843406,
    "lon": -86.19123,
    "military": false,
    "seen_pos": 0.429,
    "t": "A21N",
    "track": 108.24,
  },
  {
    "alt_baro": 525,
    "alt_geom": 500,
    "baro_rate": -576,
    "flight": "N372AM",
    "gs": 55,
    "hex": "a43b45",
    "lat": 30.740724,
    "lon": -86.149237,
    "military": false,
    "seen_pos": 0.264,
    "t": "B407",
    "track": 177.92,
  },
  {
    "alt_baro": 2050,
    "alt_geom": 2125,
    "baro_rate": 0,
    "flight": "SH070",
    "gs": 154.2,
    "hex": "ae1ecb",
    "lat": 32.24881,
    "lon": -86.143469,
    "military": true,
    "seen_pos": 0.391,
    "t": "TEX2",
    "track": 357.03,
  },
  {
    "alt_baro": 36000,
    "alt_geom": 38325,
    "baro_rate": 0,
    "flight": "AAL1737",
    "gs": 420.2,
    "hex": "ac1f0e",
    "lat": 32.843994,
    "lon": -86.141986,
    "military": false,
    "seen_pos": 0.196,
    "t": "B738",
    "track": 322.64,
  },
  {
    "alt_baro": 24750,
    "alt_geom": 26325,
    "baro_rate": 1152,
    "flight": "SWA2625",
    "gs": 425.8,
    "hex": "abfd39",
    "lat": 33.852997,
    "lon": -86.122947,
    "military": false,
    "seen_pos": 0.13,
    "t": "B38M",
    "track": 280.97,
  },
  {
    "alt_baro": 32000,
    "alt_geom": 34150,
    "baro_rate": 64,
    "flight": "UAL1213",
    "gs": 493,
    "hex": "a83787",
    "lat": 28.509567,
    "lon": -86.09922,
    "military": false,
    "seen_pos": 0.104,
    "t": "B739",
    "track": 279.69,
  },
  {
    "alt_baro": 23725,
    "alt_geom": 25200,
    "baro_rate": 1408,
    "flight": "SWA224",
    "gs": 464.6,
    "hex": "ab628c",
    "lat": 33.693466,
    "lon": -86.071883,
    "military": false,
    "seen_pos": 0.273,
    "t": "B738",
    "track": 278.91,
  },
  {
    "alt_baro": 35025,
    "alt_geom": 37325,
    "baro_rate": 0,
    "flight": "AAL2946",
    "gs": 435.3,
    "hex": "a74679",
    "lat": 28.140884,
    "lon": -86.030397,
    "military": false,
    "seen_pos": 0.104,
    "t": "A321",
    "track": 105.73,
  },
  {
    "alt_baro": 3100,
    "alt_geom": 3225,
    "baro_rate": null,
    "flight": "N9936W",
    "gs": 111.4,
    "hex": "ade107",
    "lat": 33.053718,
    "lon": -86.021492,
    "military": false,
    "seen_pos": 31.986,
    "t": "P28A",
    "track": 101.92,
  },
  {
    "alt_baro": 22575,
    "alt_geom": 24050,
    "baro_rate": -1088,
    "flight": "DAL3086",
    "gs": 441.1,
    "hex": "ad63f7",
    "lat": 31.762918,
    "lon": -85.931323,
    "military": false,
    "seen_pos": 0.429,
    "t": "B739",
    "track": 230.43,
  },
  {
    "alt_baro": 34000,
    "alt_geom": 36300,
    "baro_rate": -512,
    "flight": "AAL2196",
    "gs": 465.4,
    "hex": "acf849",
    "lat": 29.34937,
    "lon": -85.826811,
    "military": false,
    "seen_pos": 0.18,
    "t": "B738",
    "track": 278.77,
  },
  {
    "alt_baro": 5100,
    "alt_geom": 5225,
    "baro_rate": null,
    "flight": "N1701T",
    "gs": 116.2,
    "hex": "a11bba",
    "lat": 32.885651,
    "lon": -85.700116,
    "military": false,
    "seen_pos": 0.093,
    "t": "P28A",
    "track": 103.44,
  },
  {
    "alt_baro": 41000,
    "alt_geom": 43475,
    "baro_rate": -64,
    "flight": "N702AK",
    "gs": 440.2,
    "hex": "a95c06",
    "lat": 27.924593,
    "lon": -85.529991,
    "military": false,
    "seen_pos": 0.672,
    "t": "F2TH",
    "track": 108.27,
  },
  {
    "alt_baro": "ground",
    "alt_geom": null,
    "baro_rate": null,
    "flight": "N8786G",
    "gs": 8.8,
    "hex": "ac1735",
    "lat": 32.612892,
    "lon": -85.438165,
    "military": false,
    "seen_pos": 0.391,
    "t": "TEAL",
    "track": 64.69,
  },
  {
    "alt_baro": 18150,
    "alt_geom": 19275,
    "baro_rate": -2368,
    "flight": "DAL797",
    "gs": 440.6,
    "hex": "a78605",
    "lat": 34.114334,
    "lon": -85.298861,
    "military": false,
    "seen_pos": 0.398,
    "t": "B753",
    "track": 107.16,
  },
  {
    "alt_baro": 3500,
    "alt_geom": 3575,
    "baro_rate": null,
    "flight": "N216R",
    "gs": 161.6,
    "hex": "a1d143",
    "lat": 33.551222,
    "lon": -85.298538,
    "military": false,
    "seen_pos": 0.226,
    "t": "BE36",
    "track": 70.11,
  },
  {
    "alt_baro": 31000,
    "alt_geom": 33025,
    "baro_rate": 0,
    "flight": "AAL1229",
    "gs": 484.1,
    "hex": "a0cc06",
    "lat": 33.572845,
    "lon": -85.150545,
    "military": false,
    "seen_pos": 0.356,
    "t": "A321",
    "track": 88.58,
  },
  {
    "alt_baro": 2075,
    "alt_geom": 2075,
    "baro_rate": 64,
    "flight": "N830RS",
    "gs": 60,
    "hex": "ab59e2",
    "lat": 33.636413,
    "lon": -85.136776,
    "military": false,
    "seen_pos": 0.356,
    "t": null,
    "track": 1.91,
  },
  {
    "alt_baro": 38000,
    "alt_geom": 40400,
    "baro_rate": 0,
    "flight": "DAL1885",
    "gs": 423.8,
    "hex": "a8e1cc",
    "lat": 31.485466,
    "lon": -84.934589,
    "military": false,
    "seen_pos": 0.273,
    "t": "B752",
    "track": 323.35,
  },
  {
    "alt_baro": 41000,
    "alt_geom": 43450,
    "baro_rate": 0,
    "flight": "SWA572",
    "gs": 476.3,
    "hex": "ac0ff9",
    "lat": 33.081116,
    "lon": -84.891577,
    "military": false,
    "seen_pos": 0.033,
    "t": "B38M",
    "track": 140.96,
  },
  {
    "alt_baro": 19975,
    "alt_geom": 21300,
    "baro_rate": null,
    "flight": "SUB47",
    "gs": 257.4,
    "hex": "a07cc7",
    "lat": 32.471603,
    "lon": -84.882184,
    "military": false,
    "seen_pos": 0.273,
    "t": "B190",
    "track": 320.99,
  },
  {
    "alt_baro": 38975,
    "alt_geom": 41350,
    "baro_rate": null,
    "flight": "AMX005",
    "gs": 476.6,
    "hex": "0d0ed6",
    "lat": 33.203942,
    "lon": -84.862434,
    "military": false,
    "seen_pos": 0.324,
    "t": "B789",
    "track": 51.3,
  },
  {
    "alt_baro": 35000,
    "alt_geom": 37300,
    "baro_rate": 0,
    "flight": "AAY2723",
    "gs": 488.4,
    "hex": "ab1d2f",
    "lat": 30.777174,
    "lon": -84.842523,
    "military": false,
    "seen_pos": 0.429,
    "t": "B38M",
    "track": 139.07,
  },
  {
    "alt_baro": 44975,
    "alt_geom": 47350,
    "baro_rate": null,
    "flight": "FTD375",
    "gs": 418.9,
    "hex": "a44660",
    "lat": 30.843018,
    "lon": -84.743311,
    "military": false,
    "seen_pos": 0.264,
    "t": "CL35",
    "track": 327.68,
  },
  {
    "alt_baro": 1800,
    "alt_geom": 1825,
    "baro_rate": null,
    "flight": "N7262X",
    "gs": 81.3,
    "hex": "a9bc8a",
    "lat": 33.301529,
    "lon": -84.737769,
    "military": false,
    "seen_pos": 0.454,
    "t": "C72R",
    "track": 200.89,
  },
  {
    "alt_baro": 36000,
    "alt_geom": 38250,
    "baro_rate": 64,
    "flight": "AAL1258",
    "gs": 433.1,
    "hex": "a8b44e",
    "lat": 33.558334,
    "lon": -84.720621,
    "military": false,
    "seen_pos": 0.427,
    "t": "A320",
    "track": 253.36,
  },
  {
    "alt_baro": 9600,
    "alt_geom": 10100,
    "baro_rate": null,
    "flight": "EDV5535",
    "gs": 303,
    "hex": "ad01c0",
    "lat": 33.660736,
    "lon": -84.696855,
    "military": false,
    "seen_pos": 0.236,
    "t": "CRJ9",
    "track": 241.4,
  },
  {
    "alt_baro": 9900,
    "alt_geom": 10400,
    "baro_rate": null,
    "flight": "JIA5408",
    "gs": 304.2,
    "hex": "a6b0d2",
    "lat": 30.507218,
    "lon": -84.635321,
    "military": false,
    "seen_pos": 0.466,
    "t": "CRJ7",
    "track": 143.96,
  },
  {
    "alt_baro": 2550,
    "alt_geom": 2600,
    "baro_rate": -192,
    "flight": "EPI241",
    "gs": 83.9,
    "hex": "a23428",
    "lat": 30.387039,
    "lon": -84.588426,
    "military": false,
    "seen_pos": 0.344,
    "t": "C172",
    "track": 344.8,
  },
  {
    "alt_baro": 35000,
    "alt_geom": 37300,
    "baro_rate": 0,
    "flight": "AAY997",
    "gs": 485.6,
    "hex": "ab2854",
    "lat": 30.505875,
    "lon": -84.571354,
    "military": false,
    "seen_pos": 0.429,
    "t": "B38M",
    "track": 139.09,
  },
  {
    "alt_baro": 10175,
    "alt_geom": 10625,
    "baro_rate": null,
    "flight": "EDV5059",
    "gs": 276,
    "hex": "a36994",
    "lat": 33.536744,
    "lon": -84.497755,
    "military": false,
    "seen_pos": 0.238,
    "t": "CRJ9",
    "track": 89.79,
  },
  {
    "alt_baro": 12575,
    "alt_geom": 13225,
    "baro_rate": 3264,
    "flight": "DAL2315",
    "gs": 363.4,
    "hex": "a3a155",
    "lat": 33.334242,
    "lon": -84.488787,
    "military": false,
    "seen_pos": 0.033,
    "t": "A321",
    "track": 120.23,
  },
  {
    "alt_baro": 35000,
    "alt_geom": 37300,
    "baro_rate": 64,
    "flight": "AAY1056",
    "gs": 497.4,
    "hex": "a19ab1",
    "lat": 30.341766,
    "lon": -84.452281,
    "military": false,
    "seen_pos": 0.429,
    "t": "A320",
    "track": 142.76,
  },
  {
    "alt_baro": 38000,
    "alt_geom": 40425,
    "baro_rate": 0,
    "flight": "AAL2025",
    "gs": 447.5,
    "hex": "ab3982",
    "lat": 29.239367,
    "lon": -84.450396,
    "military": false,
    "seen_pos": 0,
    "t": "B738",
    "track": 294.56,
  },
  {
    "alt_baro": 35000,
    "alt_geom": 37250,
    "baro_rate": 0,
    "flight": "AAY859",
    "gs": 483.1,
    "hex": "a2e1ce",
    "lat": 33.1875,
    "lon": -84.425922,
    "military": false,
    "seen_pos": 0.508,
    "t": "A320",
    "track": 179.05,
  },
  {
    "alt_baro": 19175,
    "alt_geom": 20350,
    "baro_rate": 1856,
    "flight": "FFT3442",
    "gs": 459,
    "hex": "a4e389",
    "lat": 32.873932,
    "lon": -84.41955,
    "military": false,
    "seen_pos": 0.386,
    "t": "A20N",
    "track": 179.38,
  },
  {
    "alt_baro": 33975,
    "alt_geom": 36150,
    "baro_rate": 0,
    "flight": "FFT2791",
    "gs": 430.9,
    "hex": "a8a391",
    "lat": 33.339456,
    "lon": -84.367713,
    "military": false,
    "seen_pos": 0.287,
    "t": "A21N",
    "track": 349.03,
  },
  {
    "alt_baro": 600,
    "alt_geom": 550,
    "baro_rate": 704,
    "flight": "EPI254",
    "gs": 76,
    "hex": "a266cc",
    "lat": 30.420956,
    "lon": -84.358905,
    "military": false,
    "seen_pos": 0.016,
    "t": "C172",
    "track": 0,
  },
  {
    "alt_baro": 1050,
    "alt_geom": 1025,
    "baro_rate": 0,
    "flight": "N272MJ",
    "gs": 116.2,
    "hex": "a2af06",
    "lat": 30.083872,
    "lon": -84.34704,
    "military": false,
    "seen_pos": 0.672,
    "t": "B407",
    "track": 213.42,
  },
  {
    "alt_baro": 36300,
    "alt_geom": 38700,
    "baro_rate": -960,
    "flight": "AAY881",
    "gs": 487.2,
    "hex": "a2602c",
    "lat": 30.005012,
    "lon": -84.267444,
    "military": false,
    "seen_pos": 0.304,
    "t": "A320",
    "track": 155.12,
  },
  {
    "alt_baro": "ground",
    "alt_geom": null,
    "baro_rate": null,
    "flight": "N92ZZ",
    "gs": 0.1,
    "hex": "acbe28",
    "lat": 31.533772,
    "lon": -84.188111,
    "military": false,
    "seen_pos": 14.997,
    "t": "CL35",
    "track": null,
  },
  {
    "alt_baro": 5525,
    "alt_geom": 5725,
    "baro_rate": 128,
    "flight": "N757PM",
    "gs": 108.9,
    "hex": "aa355b",
    "lat": 32.694351,
    "lon": -84.115283,
    "military": false,
    "seen_pos": 0.226,
    "t": "C152",
    "track": 156.73,
  },
  {
    "alt_baro": 43000,
    "alt_geom": 45400,
    "baro_rate": 0,
    "flight": "EJA553",
    "gs": 463.6,
    "hex": "a70bff",
    "lat": 32.853973,
    "lon": -84.039587,
    "military": false,
    "seen_pos": 0.274,
    "t": "C68A",
    "track": 162.42,
  },
  {
    "alt_baro": 36025,
    "alt_geom": 38350,
    "baro_rate": 0,
    "flight": "SWA1852",
    "gs": 432.8,
    "hex": "ac00d6",
    "lat": 31.665158,
    "lon": -83.988885,
    "military": false,
    "seen_pos": 0.224,
    "t": "B38M",
    "track": 349.08,
  },
  {
    "alt_baro": 36000,
    "alt_geom": 38325,
    "baro_rate": 64,
    "flight": "AAY3152",
    "gs": 422.9,
    "hex": "a2d6a9",
    "lat": 31.494186,
    "lon": -83.94244,
    "military": false,
    "seen_pos": 0.386,
    "t": "A320",
    "track": 339.08,
  },
  {
    "alt_baro": 30000,
    "alt_geom": 31925,
    "baro_rate": 0,
    "flight": "UAL3936",
    "gs": 476.1,
    "hex": "aa8a07",
    "lat": 32.530701,
    "lon": -83.927252,
    "military": false,
    "seen_pos": 0.033,
    "t": "B753",
    "track": 0.96,
  },
  {
    "alt_baro": 26975,
    "alt_geom": 28700,
    "baro_rate": 64,
    "flight": "AAL2401",
    "gs": 456.8,
    "hex": "ad1c11",
    "lat": 29.572635,
    "lon": -83.897041,
    "military": false,
    "seen_pos": 0.162,
    "t": "B738",
    "track": 135.89,
  },
  {
    "alt_baro": 32000,
    "alt_geom": 34125,
    "baro_rate": 0,
    "flight": "SWA4964",
    "gs": 460.8,
    "hex": "ac24c5",
    "lat": 30.18503,
    "lon": -83.825903,
    "military": false,
    "seen_pos": 0.508,
    "t": "B38M",
    "track": 323.83,
  },
  {
    "alt_baro": 30950,
    "alt_geom": 32950,
    "baro_rate": 1088,
    "flight": "DAL1107",
    "gs": 486.1,
    "hex": "a8de10",
    "lat": 32.034622,
    "lon": -83.8008,
    "military": false,
    "seen_pos": 0.115,
    "t": "B752",
    "track": 162.27,
  },
  {
    "alt_baro": 35525,
    "alt_geom": 37850,
    "baro_rate": -960,
    "flight": "DAL1057",
    "gs": 482.3,
    "hex": "ac85ce",
    "lat": 29.570435,
    "lon": -83.733092,
    "military": false,
    "seen_pos": 0.104,
    "t": "B739",
    "track": 150.56,
  },
  {
    "alt_baro": 38000,
    "alt_geom": 40425,
    "baro_rate": 0,
    "flight": "SWA3621",
    "gs": 422.2,
    "hex": "ac7283",
    "lat": 31.038472,
    "lon": -83.718073,
    "military": false,
    "seen_pos": 0.016,
    "t": "B38M",
    "track": 337.14,
  },
  {
    "alt_baro": 38000,
    "alt_geom": 40400,
    "baro_rate": 64,
    "flight": "FFT1713",
    "gs": 424,
    "hex": "a3b414",
    "lat": 30.802414,
    "lon": -83.60208,
    "military": false,
    "seen_pos": 0.264,
    "t": "A20N",
    "track": 337.24,
  },
  {
    "alt_baro": 27000,
    "alt_geom": 28800,
    "baro_rate": 128,
    "flight": "JWZ790",
    "gs": 477.1,
    "hex": "aab9a8",
    "lat": 29.78714,
    "lon": -83.596767,
    "military": false,
    "seen_pos": 0.836,
    "t": "LJ60",
    "track": 157.57,
  },
  {
    "alt_baro": 23875,
    "alt_geom": 25450,
    "baro_rate": 384,
    "flight": "DAL1733",
    "gs": 515.5,
    "hex": "a402dd",
    "lat": 31.874313,
    "lon": -83.56366,
    "military": false,
    "seen_pos": 0.386,
    "t": "A321",
    "track": 160.86,
  },
  {
    "alt_baro": 34000,
    "alt_geom": 36175,
    "baro_rate": 0,
    "flight": "UAL1997",
    "gs": 437.4,
    "hex": "aa7e2e",
    "lat": 30.688446,
    "lon": -83.546906,
    "military": false,
    "seen_pos": 0.344,
    "t": "B738",
    "track": 337.13,
  },
  {
    "alt_baro": 36025,
    "alt_geom": 38350,
    "baro_rate": 0,
    "flight": "JBU863",
    "gs": 428.6,
    "hex": "a85ff5",
    "lat": 30.255798,
    "lon": -83.316489,
    "military": false,
    "seen_pos": 0.016,
    "t": "A320",
    "track": 336.49,
  },
]
`;

exports[`ADS-B normalization parity > matches the approved legacy airplanes.live snapshot 1`] = `
[
  {
    "alt_baro": 36000,
    "alt_geom": 38500,
    "baro_rate": -64,
    "flight": "DAL1222",
    "gs": 473.5,
    "hex": "a3c15d",
    "lat": 31.256104,
    "lon": -92.500521,
    "military": false,
    "seen_pos": 0.478,
    "t": "A321",
    "track": 245.55,
  },
  {
    "alt_baro": 36000,
    "alt_geom": 38425,
    "baro_rate": 0,
    "flight": "SWA4025",
    "gs": 480.2,
    "hex": "abe8b6",
    "lat": 29.209808,
    "lon": -92.411024,
    "military": false,
    "seen_pos": 0.436,
    "t": "B738",
    "track": 276.58,
  },
  {
    "alt_baro": 35000,
    "alt_geom": 37500,
    "baro_rate": 0,
    "flight": "FFT2886",
    "gs": 472.6,
    "hex": "a8a748",
    "lat": 32.008574,
    "lon": -92.388181,
    "military": false,
    "seen_pos": 0.193,
    "t": "A21N",
    "track": 102.71,
  },
  {
    "alt_baro": 38025,
    "alt_geom": 40650,
    "baro_rate": 0,
    "flight": "VOI1893",
    "gs": 461.2,
    "hex": "0d10ec",
    "lat": 32.560135,
    "lon": -92.35036,
    "military": false,
    "seen_pos": 1.072,
    "t": "A320",
    "track": 205.29,
  },
  {
    "alt_baro": 36000,
    "alt_geom": 38475,
    "baro_rate": 0,
    "flight": "AAL1698",
    "gs": 463.8,
    "hex": "a09533",
    "lat": 32.553452,
    "lon": -92.345361,
    "military": false,
    "seen_pos": 0.063,
    "t": "A321",
    "track": 258.18,
  },
  {
    "alt_baro": 38000,
    "alt_geom": 40575,
    "baro_rate": 0,
    "flight": "SWA4015",
    "gs": 470.5,
    "hex": "a19404",
    "lat": 31.075667,
    "lon": -92.268896,
    "military": false,
    "seen_pos": 0.151,
    "t": "B737",
    "track": 296.24,
  },
  {
    "alt_baro": 41000,
    "alt_geom": 43625,
    "baro_rate": -64,
    "flight": "SWA1937",
    "gs": 448.2,
    "hex": "abb5e2",
    "lat": 32.040161,
    "lon": -92.218964,
    "military": false,
    "seen_pos": 0.028,
    "t": "B738",
    "track": 99.5,
  },
  {
    "alt_baro": 36000,
    "alt_geom": 38525,
    "baro_rate": 0,
    "flight": "DAL2051",
    "gs": 479.8,
    "hex": "a3c9b4",
    "lat": 31.310616,
    "lon": -92.203198,
    "military": false,
    "seen_pos": 0.151,
    "t": "A320",
    "track": 240.12,
  },
  {
    "alt_baro": 35975,
    "alt_geom": 38400,
    "baro_rate": -64,
    "flight": "JBU607",
    "gs": 472.4,
    "hex": "adc9b6",
    "lat": 29.45942,
    "lon": -92.013406,
    "military": false,
    "seen_pos": 0.075,
    "t": "A321",
    "track": 281.48,
  },
  {
    "alt_baro": 24700,
    "alt_geom": 26400,
    "baro_rate": 704,
    "flight": "UAL2194",
    "gs": 486.7,
    "hex": "a81006",
    "lat": 30.997506,
    "lon": -92.002533,
    "military": false,
    "seen_pos": 0.193,
    "t": "B739",
    "track": 287.58,
  },
  {
    "alt_baro": 31425,
    "alt_geom": 33625,
    "baro_rate": 1344,
    "flight": "SWA4677",
    "gs": 483.7,
    "hex": "abd50f",
    "lat": 31.067276,
    "lon": -91.794326,
    "military": false,
    "seen_pos": 0,
    "t": "B738",
    "track": 290.2,
  },
  {
    "alt_baro": 34000,
    "alt_geom": 36400,
    "baro_rate": null,
    "flight": "JIA5222",
    "gs": 466.2,
    "hex": "a6d857",
    "lat": 32.583866,
    "lon": -91.712466,
    "military": false,
    "seen_pos": 0.356,
    "t": "CRJ7",
    "track": 233.55,
  },
  {
    "alt_baro": 36000,
    "alt_geom": 38525,
    "baro_rate": 0,
    "flight": "FFT3097",
    "gs": 461.6,
    "hex": "a8d635",
    "lat": 32.585907,
    "lon": -91.570111,
    "military": false,
    "seen_pos": 0.103,
    "t": null,
    "track": 260.27,
  },
  {
    "alt_baro": 18200,
    "alt_geom": 19500,
    "baro_rate": null,
    "flight": "N111WH",
    "gs": 476.9,
    "hex": "a031e6",
    "lat": 30.218445,
    "lon": -91.316044,
    "military": false,
    "seen_pos": 0.203,
    "t": "FA10",
    "track": 138.83,
  },
  {
    "alt_baro": 35025,
    "alt_geom": 37425,
    "baro_rate": 0,
    "flight": "FFT4978",
    "gs": 451.4,
    "hex": "a9af3e",
    "lat": 29.442102,
    "lon": -91.229499,
    "military": false,
    "seen_pos": 0.325,
    "t": "A321",
    "track": 103.45,
  },
  {
    "alt_baro": 17225,
    "alt_geom": 18375,
    "baro_rate": -1792,
    "flight": "ENY3868",
    "gs": 382.5,
    "hex": "a2ba48",
    "lat": 32.486107,
    "lon": -91.211579,
    "military": false,
    "seen_pos": 6.134,
    "t": "E75L",
    "track": 92.85,
  },
  {
    "alt_baro": 37000,
    "alt_geom": 39475,
    "baro_rate": 0,
    "flight": "UAL1591",
    "gs": 438,
    "hex": "a2c336",
    "lat": 33.416872,
    "lon": -91.200481,
    "military": false,
    "seen_pos": 0.199,
    "t": "B737",
    "track": 56.93,
  },
  {
    "alt_baro": 36000,
    "alt_geom": 38450,
    "baro_rate": 0,
    "flight": "SWA2634",
    "gs": 472,
    "hex": "abb245",
    "lat": 31.038895,
    "lon": -91.102026,
    "military": false,
    "seen_pos": 0.075,
    "t": "B738",
    "track": 301.13,
  },
  {
    "alt_baro": 12300,
    "alt_geom": 13100,
    "baro_rate": -2176,
    "flight": "SWA878",
    "gs": 386,
    "hex": "a1b1bc",
    "lat": 30.246711,
    "lon": -91.070343,
    "military": false,
    "seen_pos": 0.043,
    "t": "B737",
    "track": 139.83,
  },
  {
    "alt_baro": 35000,
    "alt_geom": 37425,
    "baro_rate": 0,
    "flight": "AAL364",
    "gs": 449.6,
    "hex": "a78a52",
    "lat": 30.516678,
    "lon": -90.95231,
    "military": false,
    "seen_pos": 0.272,
    "t": "A321",
    "track": 128.68,
  },
  {
    "alt_baro": 36000,
    "alt_geom": 38450,
    "baro_rate": 0,
    "flight": "AAL2629",
    "gs": 470.5,
    "hex": "a777bf",
    "lat": 28.947968,
    "lon": -90.939173,
    "military": false,
    "seen_pos": 0.204,
    "t": "A321",
    "track": 281.52,
  },
  {
    "alt_baro": 34000,
    "alt_geom": 36400,
    "baro_rate": 0,
    "flight": "ENY557G",
    "gs": 455.8,
    "hex": "a23c5d",
    "lat": 32.81281,
    "lon": -90.877169,
    "military": false,
    "seen_pos": 0.646,
    "t": "E75L",
    "track": 258.74,
  },
  {
    "alt_baro": 33000,
    "alt_geom": 35175,
    "baro_rate": 64,
    "flight": "ENY4064",
    "gs": 469.1,
    "hex": "a3d3b3",
    "lat": 33.420876,
    "lon": -90.838997,
    "military": false,
    "seen_pos": 0.116,
    "t": null,
    "track": 84.62,
  },
  {
    "alt_baro": 30000,
    "alt_geom": 32125,
    "baro_rate": -64,
    "flight": "DAL1081",
    "gs": 464.9,
    "hex": "a417c9",
    "lat": 31.449575,
    "lon": -90.676978,
    "military": false,
    "seen_pos": 0,
    "t": "A321",
    "track": 238.63,
  },
  {
    "alt_baro": 31025,
    "alt_geom": 33200,
    "baro_rate": null,
    "flight": "JIA5267",
    "gs": 484.9,
    "hex": "a87cbe",
    "lat": 33.39327,
    "lon": -90.546234,
    "military": false,
    "seen_pos": 0.934,
    "t": "CRJ9",
    "track": 86.45,
  },
  {
    "alt_baro": 35000,
    "alt_geom": 37425,
    "baro_rate": -64,
    "flight": "DAL1223",
    "gs": 452.3,
    "hex": "a3dc47",
    "lat": 30.665961,
    "lon": -90.500372,
    "military": false,
    "seen_pos": 0.204,
    "t": "A320",
    "track": 75.53,
  },
  {
    "alt_baro": 38000,
    "alt_geom": 40550,
    "baro_rate": 0,
    "flight": "SWA888",
    "gs": 475.3,
    "hex": "ac0c24",
    "lat": 29.547776,
    "lon": -90.487922,
    "military": false,
    "seen_pos": 0.272,
    "t": null,
    "track": 268.07,
  },
  {
    "alt_baro": 36000,
    "alt_geom": 38475,
    "baro_rate": 0,
    "flight": "FFT2745",
    "gs": 443.8,
    "hex": "a44e59",
    "lat": 34.034248,
    "lon": -90.439796,
    "military": false,
    "seen_pos": 0.033,
    "t": "A20N",
    "track": 298.24,
  },
  {
    "alt_baro": 33000,
    "alt_geom": 35275,
    "baro_rate": 0,
    "flight": "AAY1280",
    "gs": 476.1,
    "hex": "ab44ae",
    "lat": 33.903343,
    "lon": -90.420914,
    "military": false,
    "seen_pos": 0.476,
    "t": "B38M",
    "track": 114.84,
  },
  {
    "alt_baro": 35025,
    "alt_geom": 37475,
    "baro_rate": 0,
    "flight": "AAL2974",
    "gs": 459.6,
    "hex": "a10bbc",
    "lat": 30.066559,
    "lon": -90.335083,
    "military": false,
    "seen_pos": 0.382,
    "t": "A321",
    "track": 139.41,
  },
  {
    "alt_baro": 2675,
    "alt_geom": 2800,
    "baro_rate": null,
    "flight": "N836CS",
    "gs": 129.9,
    "hex": "ab6ee7",
    "lat": 32.157394,
    "lon": -90.317285,
    "military": false,
    "seen_pos": 0.237,
    "t": "EC35",
    "track": 35.28,
  },
  {
    "alt_baro": 25775,
    "alt_geom": 27550,
    "baro_rate": 1216,
    "flight": "SWA1122",
    "gs": 457.8,
    "hex": "ac3e13",
    "lat": 33.688339,
    "lon": -90.317875,
    "military": false,
    "seen_pos": 0,
    "t": "B38M",
    "track": 228.72,
  },
  {
    "alt_baro": 36000,
    "alt_geom": 38350,
    "baro_rate": -64,
    "flight": "SKW4095",
    "gs": 442.6,
    "hex": "a2dac7",
    "lat": 33.458862,
    "lon": -90.301227,
    "military": false,
    "seen_pos": 0.804,
    "t": "E75L",
    "track": 260.9,
  },
  {
    "alt_baro": 2800,
    "alt_geom": 2800,
    "baro_rate": null,
    "flight": "N3072D",
    "gs": 98.7,
    "hex": "a33bf5",
    "lat": 30.517227,
    "lon": -90.292053,
    "military": false,
    "seen_pos": 0,
    "t": "P28A",
    "track": 107.7,
  },
  {
    "alt_baro": 650,
    "alt_geom": 675,
    "baro_rate": -768,
    "flight": "UAL2042",
    "gs": 147.5,
    "hex": "a2b7cd",
    "lat": 29.980774,
    "lon": -90.215957,
    "military": false,
    "seen_pos": 0.043,
    "t": null,
    "track": 285.73,
  },
  {
    "alt_baro": 29000,
    "alt_geom": 30950,
    "baro_rate": 0,
    "flight": "ENY3619",
    "gs": 472.7,
    "hex": "a29a37",
    "lat": 31.572473,
    "lon": -90.082672,
    "military": false,
    "seen_pos": 0.371,
    "t": "E75L",
    "track": 103.33,
  },
  {
    "alt_baro": 36000,
    "alt_geom": 38475,
    "baro_rate": 0,
    "flight": "AAL434",
    "gs": 462.5,
    "hex": "acdfa6",
    "lat": 31.850739,
    "lon": -90.073114,
    "military": false,
    "seen_pos": 0.043,
    "t": "B738",
    "track": 250.15,
  },
  {
    "alt_baro": 1425,
    "alt_geom": 1425,
    "baro_rate": null,
    "flight": "JIA5566",
    "gs": 139.1,
    "hex": "a7e279",
    "lat": 32.239471,
    "lon": -90.04801,
    "military": false,
    "seen_pos": 0.237,
    "t": "CRJ9",
    "track": 338.05,
  },
  {
    "alt_baro": 3650,
    "alt_geom": 3850,
    "baro_rate": -1024,
    "flight": "UCA4334",
    "gs": 216.5,
    "hex": "a0339f",
    "lat": 32.15107,
    "lon": -90.013284,
    "military": false,
    "seen_pos": 0.237,
    "t": "E45X",
    "track": 21.11,
  },
  {
    "alt_baro": 43000,
    "alt_geom": 45575,
    "baro_rate": null,
    "flight": "LXJ433",
    "gs": 458.5,
    "hex": "a52ed6",
    "lat": 32.716121,
    "lon": -89.958521,
    "military": false,
    "seen_pos": 0.14,
    "t": "E545",
    "track": 236.66,
  },
  {
    "alt_baro": 36000,
    "alt_geom": 38400,
    "baro_rate": 0,
    "flight": "UAL1872",
    "gs": 474.2,
    "hex": "aa2b79",
    "lat": 29.150436,
    "lon": -89.914116,
    "military": false,
    "seen_pos": 0.204,
    "t": "B739",
    "track": 278.49,
  },
  {
    "alt_baro": "ground",
    "alt_geom": null,
    "baro_rate": 34,
    "flight": "N10958",
    "gs": 104,
    "hex": "a0294b",
    "lat": 34.192665,
    "lon": -89.78788,
    "military": false,
    "seen_pos": 3.853,
    "t": null,
    "track": 279.2,
  },
  {
    "alt_baro": 14575,
    "alt_geom": 15525,
    "baro_rate": -2880,
    "flight": "UCA4337",
    "gs": 385.9,
    "hex": "a05ad4",
    "lat": 29.984482,
    "lon": -89.78092,
    "military": false,
    "seen_pos": 0.103,
    "t": "E45X",
    "track": 55.24,
  },
  {
    "alt_baro": 26625,
    "alt_geom": 28475,
    "baro_rate": null,
    "flight": "JIA5454",
    "gs": 459.2,
    "hex": "a7db0b",
    "lat": 31.456464,
    "lon": -89.691559,
    "military": false,
    "seen_pos": 0.34,
    "t": "CRJ9",
    "track": 219.17,
  },
  {
    "alt_baro": 33975,
    "alt_geom": 36325,
    "baro_rate": 64,
    "flight": "DAL1104",
    "gs": 444.1,
    "hex": "ac66d5",
    "lat": 32.846375,
    "lon": -89.689417,
    "military": false,
    "seen_pos": 0.809,
    "t": "B712",
    "track": 261.32,
  },
  {
    "alt_baro": 27750,
    "alt_geom": 29725,
    "baro_rate": 1408,
    "flight": "SWA2071",
    "gs": 465.1,
    "hex": "a56e0d",
    "lat": 31.029301,
    "lon": -89.609766,
    "military": false,
    "seen_pos": 0.043,
    "t": "B737",
    "track": 30.92,
  },
  {
    "alt_baro": 37000,
    "alt_geom": 39525,
    "baro_rate": 0,
    "flight": "UAL1961",
    "gs": 487.8,
    "hex": "a5cc11",
    "lat": 32.703459,
    "lon": -89.558529,
    "military": false,
    "seen_pos": 0.56,
    "t": "B38M",
    "track": 121.93,
  },
  {
    "alt_baro": 37000,
    "alt_geom": 39475,
    "baro_rate": 0,
    "flight": "AAL1267",
    "gs": 442.9,
    "hex": "ac390f",
    "lat": 29.277121,
    "lon": -89.324341,
    "military": false,
    "seen_pos": 0,
    "t": "B738",
    "track": 125.63,
  },
  {
    "alt_baro": 32000,
    "alt_geom": 34200,
    "baro_rate": -64,
    "flight": "ASH6156",
    "gs": 472.8,
    "hex": "abdc91",
    "lat": 32.723465,
    "lon": -89.324561,
    "military": false,
    "seen_pos": 0.975,
    "t": "E75L",
    "track": 242.41,
  },
  {
    "alt_baro": 31000,
    "alt_geom": 33100,
    "baro_rate": null,
    "flight": "SKW5094",
    "gs": 437.1,
    "hex": "ad3dba",
    "lat": 32.745682,
    "lon": -89.322323,
    "military": false,
    "seen_pos": 0.809,
    "t": "CRJ2",
    "track": 64.96,
  },
  {
    "alt_baro": 34000,
    "alt_geom": 36325,
    "baro_rate": -64,
    "flight": "FFT3311",
    "gs": 446.7,
    "hex": "a21432",
    "lat": 33.160881,
    "lon": -89.263468,
    "military": false,
    "seen_pos": 0.185,
    "t": "A320",
    "track": 289.9,
  },
  {
    "alt_baro": 37000,
    "alt_geom": 39400,
    "baro_rate": 0,
    "flight": "SWA277",
    "gs": 464.4,
    "hex": "abe7e3",
    "lat": 34.397415,
    "lon": -89.256237,
    "military": false,
    "seen_pos": 0.195,
    "t": "B738",
    "track": 80.46,
  },
  {
    "alt_baro": 4000,
    "alt_geom": 4100,
    "baro_rate": null,
    "flight": "N521WS",
    "gs": 177.5,
    "hex": "a68eaa",
    "lat": 30.19015,
    "lon": -89.211566,
    "military": false,
    "seen_pos": 0.043,
    "t": "BE58",
    "track": 258.63,
  },
  {
    "alt_baro": 34000,
    "alt_geom": 36325,
    "baro_rate": 0,
    "flight": "UAL2215",
    "gs": 462.8,
    "hex": "a9b4de",
    "lat": 28.988311,
    "lon": -89.198267,
    "military": false,
    "seen_pos": 2.719,
    "t": "B739",
    "track": 283.5,
  },
  {
    "alt_baro": 34975,
    "alt_geom": 37350,
    "baro_rate": 0,
    "flight": "FFT1418",
    "gs": 444.1,
    "hex": "a967ae",
    "lat": 28.979606,
    "lon": -89.157984,
    "military": false,
    "seen_pos": 0.043,
    "t": "A321",
    "track": 103.41,
  },
  {
    "alt_baro": 31000,
    "alt_geom": 33150,
    "baro_rate": 0,
    "flight": "UAL129",
    "gs": 470.9,
    "hex": "a8886d",
    "lat": 28.612309,
    "lon": -89.14743,
    "military": false,
    "seen_pos": 32.922,
    "t": "B763",
    "track": 102.89,
  },
  {
    "alt_baro": 33000,
    "alt_geom": 35200,
    "baro_rate": 0,
    "flight": "UAE2VL",
    "gs": 506.8,
    "hex": "89647f",
    "lat": 33.893986,
    "lon": -89.135456,
    "military": false,
    "seen_pos": 0.413,
    "t": "A388",
    "track": 66.01,
  },
  {
    "alt_baro": 31000,
    "alt_geom": 33125,
    "baro_rate": 0,
    "flight": "AAL2844",
    "gs": 448.4,
    "hex": "a8a6d0",
    "lat": 30.682571,
    "lon": -89.13375,
    "military": false,
    "seen_pos": 0,
    "t": "A320",
    "track": 85.52,
  },
  {
    "alt_baro": 29000,
    "alt_geom": 31025,
    "baro_rate": 0,
    "flight": "AAL2673",
    "gs": 472.5,
    "hex": "ac72f0",
    "lat": 31.351501,
    "lon": -89.081511,
    "military": false,
    "seen_pos": 0.229,
    "t": "B738",
    "track": 103.71,
  },
  {
    "alt_baro": 33000,
    "alt_geom": 35200,
    "baro_rate": -64,
    "flight": "UCA4343",
    "gs": 461.1,
    "hex": "a23675",
    "lat": 30.635702,
    "lon": -88.758051,
    "military": false,
    "seen_pos": 0.174,
    "t": "E45X",
    "track": 75.3,
  },
  {
    "alt_baro": 35000,
    "alt_geom": 37425,
    "baro_rate": 0,
    "flight": "FFT2400",
    "gs": 463.7,
    "hex": "a8e3b3",
    "lat": 31.339804,
    "lon": -88.651868,
    "military": false,
    "seen_pos": 0.174,
    "t": "A21N",
    "track": 75.51,
  },
  {
    "alt_baro": 31000,
    "alt_geom": 33125,
    "baro_rate": 0,
    "flight": "UAL1444",
    "gs": 460.7,
    "hex": "ac0831",
    "lat": 31.125458,
    "lon": -88.517384,
    "military": false,
    "seen_pos": 0.068,
    "t": "B39M",
    "track": 77.08,
  },
  {
    "alt_baro": 29025,
    "alt_geom": 30975,
    "baro_rate": 0,
    "flight": "AAL813",
    "gs": 472.3,
    "hex": "ab5fdd",
    "lat": 31.262192,
    "lon": -88.4722,
    "military": false,
    "seen_pos": 0.011,
    "t": "A319",
    "track": 105.1,
  },
  {
    "alt_baro": 35000,
    "alt_geom": 37350,
    "baro_rate": 0,
    "flight": "CAL5382",
    "gs": 479.6,
    "hex": "8990a5",
    "lat": 28.701965,
    "lon": -88.458745,
    "military": false,
    "seen_pos": 2.757,
    "t": "B77L",
    "track": 130.26,
  },
  {
    "alt_baro": 34000,
    "alt_geom": 36250,
    "baro_rate": 0,
    "flight": "DAL1531",
    "gs": 449.1,
    "hex": "acc23f",
    "lat": 34.016791,
    "lon": -88.437824,
    "military": false,
    "seen_pos": 0.063,
    "t": "B739",
    "track": 273.96,
  },
  {
    "alt_baro": 30000,
    "alt_geom": 32125,
    "baro_rate": 64,
    "flight": "DAL3111",
    "gs": 471.9,
    "hex": "adc180",
    "lat": 32.306694,
    "lon": -88.403787,
    "military": false,
    "seen_pos": 0.068,
    "t": "B712",
    "track": 244.25,
  },
  {
    "alt_baro": 29000,
    "alt_geom": 30900,
    "baro_rate": 64,
    "flight": "ASH6206",
    "gs": 449.2,
    "hex": "ac0418",
    "lat": 33.840917,
    "lon": -88.40332,
    "military": false,
    "seen_pos": 0.185,
    "t": "E75L",
    "track": 66.52,
  },
  {
    "alt_baro": 11125,
    "alt_geom": 11825,
    "baro_rate": -1472,
    "flight": "SCX8218",
    "gs": 391.8,
    "hex": "ab88ee",
    "lat": 30.713196,
    "lon": -88.388403,
    "military": false,
    "seen_pos": 0.377,
    "t": "B738",
    "track": 240.49,
  },
  {
    "alt_baro": 36000,
    "alt_geom": 38425,
    "baro_rate": 0,
    "flight": "SWA4583",
    "gs": 480.4,
    "hex": "ac4ffb",
    "lat": 28.704163,
    "lon": -88.326909,
    "military": false,
    "seen_pos": 0.204,
    "t": "B38M",
    "track": 279.34,
  },
  {
    "alt_baro": 675,
    "alt_geom": 625,
    "baro_rate": 30,
    "flight": "N248BL",
    "gs": 92,
    "hex": "a24ddb",
    "lat": 30.708881,
    "lon": -88.259384,
    "military": false,
    "seen_pos": 6.212,
    "t": null,
    "track": 143.5,
  },
  {
    "alt_baro": 36000,
    "alt_geom": 38425,
    "baro_rate": 0,
    "flight": "UAL1066",
    "gs": 434.4,
    "hex": "ab97e6",
    "lat": 33.414917,
    "lon": -88.225159,
    "military": false,
    "seen_pos": 0.42,
    "t": "A319",
    "track": 240.48,
  },
  {
    "alt_baro": 29000,
    "alt_geom": 31050,
    "baro_rate": 0,
    "flight": "AAL2206",
    "gs": 474.1,
    "hex": "a0f73c",
    "lat": 29.097383,
    "lon": -88.193826,
    "military": false,
    "seen_pos": 0.043,
    "t": "A321",
    "track": 120.13,
  },
  {
    "alt_baro": 33975,
    "alt_geom": 36250,
    "baro_rate": -64,
    "flight": "AAL3036",
    "gs": 441.5,
    "hex": "ad36c8",
    "lat": 33.817245,
    "lon": -88.051608,
    "military": false,
    "seen_pos": 0.229,
    "t": null,
    "track": 272.73,
  },
  {
    "alt_baro": 36975,
    "alt_geom": 39475,
    "baro_rate": null,
    "flight": "AMX001",
    "gs": 484.6,
    "hex": "0d08d1",
    "lat": 31.355586,
    "lon": -88.040314,
    "military": false,
    "seen_pos": 0.174,
    "t": "B789",
    "track": 52.8,
  },
  {
    "alt_baro": 34025,
    "alt_geom": 36250,
    "baro_rate": -960,
    "flight": "AAL2391",
    "gs": 475,
    "hex": "a3d4ed",
    "lat": 34.73671,
    "lon": -88.036026,
    "military": false,
    "seen_pos": 0.348,
    "t": "B738",
    "track": 101.78,
  },
  {
    "alt_baro": 36000,
    "alt_geom": 38400,
    "baro_rate": 0,
    "flight": "AAL2541",
    "gs": 452.1,
    "hex": "adb29f",
    "lat": 30.126114,
    "lon": -88.015568,
    "military": false,
    "seen_pos": 0.503,
    "t": "B738",
    "track": 284.34,
  },
  {
    "alt_baro": 36000,
    "alt_geom": 38400,
    "baro_rate": 0,
    "flight": "SWA1696",
    "gs": 483.2,
    "hex": "abd135",
    "lat": 28.626181,
    "lon": -88.003181,
    "military": false,
    "seen_pos": 0,
    "t": "B738",
    "track": 279.89,
  },
  {
    "alt_baro": 36000,
    "alt_geom": 38375,
    "baro_rate": 0,
    "flight": "ROU1889",
    "gs": 471.6,
    "hex": "c05044",
    "lat": 34.130937,
    "lon": -87.995224,
    "military": false,
    "seen_pos": 0.421,
    "t": "B38M",
    "track": 218.72,
  },
  {
    "alt_baro": 31000,
    "alt_geom": 33125,
    "baro_rate": 0,
    "flight": "UAL2293",
    "gs": 421.1,
    "hex": "a445ee",
    "lat": 30.756729,
    "lon": -87.880877,
    "military": false,
    "seen_pos": 0.012,
    "t": "B739",
    "track": 85.91,
  },
  {
    "alt_baro": 39000,
    "alt_geom": 41450,
    "baro_rate": 64,
    "flight": "AAY2651",
    "gs": 469.9,
    "hex": "a37e6c",
    "lat": 34.645111,
    "lon": -87.843204,
    "military": false,
    "seen_pos": 0.201,
    "t": "A319",
    "track": 149.29,
  },
  {
    "alt_baro": 34000,
    "alt_geom": 36275,
    "baro_rate": 0,
    "flight": "AAL2799",
    "gs": 481.9,
    "hex": "a35e9c",
    "lat": 28.066298,
    "lon": -87.840594,
    "military": false,
    "seen_pos": 21.585,
    "t": "B38M",
    "track": 299.6,
  },
  {
    "alt_baro": 37000,
    "alt_geom": 39450,
    "baro_rate": -64,
    "flight": "VIV686",
    "gs": 436.7,
    "hex": "0d12ac",
    "lat": 31.398102,
    "lon": -87.776561,
    "military": false,
    "seen_pos": 0.376,
    "t": "A20N",
    "track": 57.91,
  },
  {
    "alt_baro": 37000,
    "alt_geom": 39450,
    "baro_rate": 0,
    "flight": "AAL1316",
    "gs": 458.6,
    "hex": "ad2fd0",
    "lat": 34.566833,
    "lon": -87.776221,
    "military": false,
    "seen_pos": 0.417,
    "t": "B738",
    "track": 82.86,
  },
  {
    "alt_baro": 6500,
    "alt_geom": 6775,
    "baro_rate": 0,
    "flight": "N8089E",
    "gs": 105.5,
    "hex": "ab032d",
    "lat": 30.596319,
    "lon": -87.623383,
    "military": false,
    "seen_pos": 0.011,
    "t": "C172",
    "track": 275.44,
  },
  {
    "alt_baro": 37000,
    "alt_geom": 39500,
    "baro_rate": 64,
    "flight": "AAL1837",
    "gs": 473.5,
    "hex": "ad928e",
    "lat": 31.550537,
    "lon": -87.599972,
    "military": false,
    "seen_pos": 0.376,
    "t": "B738",
    "track": 113.26,
  },
  {
    "alt_baro": 3525,
    "alt_geom": 3725,
    "baro_rate": -384,
    "flight": "BB257",
    "gs": 178.2,
    "hex": "ae58f6",
    "lat": 30.76149,
    "lon": -87.582415,
    "military": true,
    "seen_pos": 0.147,
    "t": "TEX2",
    "track": 73.7,
  },
  {
    "alt_baro": 5925,
    "alt_geom": 6225,
    "baro_rate": -384,
    "flight": "N208LS",
    "gs": 157.9,
    "hex": "a1b0c6",
    "lat": 30.515533,
    "lon": -87.555973,
    "military": false,
    "seen_pos": 0.303,
    "t": "C208",
    "track": 284.3,
  },
  {
    "alt_baro": 25425,
    "alt_geom": 27175,
    "baro_rate": 576,
    "flight": "DAL896",
    "gs": 486.1,
    "hex": "a4a0d9",
    "lat": 34.026986,
    "lon": -87.553482,
    "military": false,
    "seen_pos": 0.358,
    "t": "A321",
    "track": 279.11,
  },
  {
    "alt_baro": 31000,
    "alt_geom": 33125,
    "baro_rate": -64,
    "flight": "SWA2986",
    "gs": 475.5,
    "hex": "ac36cc",
    "lat": 31.448547,
    "lon": -87.475406,
    "military": false,
    "seen_pos": 0.339,
    "t": "B38M",
    "track": 54.07,
  },
  {
    "alt_baro": 35000,
    "alt_geom": 37275,
    "baro_rate": 0,
    "flight": "AAY2845",
    "gs": 494.6,
    "hex": "ab120a",
    "lat": 34.701993,
    "lon": -87.400761,
    "military": false,
    "seen_pos": 0.229,
    "t": null,
    "track": 142.81,
  },
  {
    "alt_baro": 40025,
    "alt_geom": 42375,
    "baro_rate": 0,
    "flight": "GTI9371",
    "gs": 460.8,
    "hex": "a86d51",
    "lat": 28.920135,
    "lon": -87.384567,
    "military": false,
    "seen_pos": 0.371,
    "t": "B763",
    "track": 292.73,
  },
  {
    "alt_baro": 35000,
    "alt_geom": 37275,
    "baro_rate": null,
    "flight": "EDV4967",
    "gs": 464,
    "hex": "accf1c",
    "lat": 33.529587,
    "lon": -87.371246,
    "military": false,
    "seen_pos": 0.229,
    "t": "CRJ9",
    "track": 70.35,
  },
  {
    "alt_baro": 36000,
    "alt_geom": 38325,
    "baro_rate": 0,
    "flight": "DAL825",
    "gs": 436.4,
    "hex": "a939e8",
    "lat": 33.9316,
    "lon": -87.311039,
    "military": false,
    "seen_pos": 0.147,
    "t": "B752",
    "track": 281.9,
  },
  {
    "alt_baro": 39000,
    "alt_geom": 41475,
    "baro_rate": 0,
    "flight": "UAL2323",
    "gs": 439.7,
    "hex": "a3cf6d",
    "lat": 28.47228,
    "lon": -87.198379,
    "military": false,
    "seen_pos": 0,
    "t": "B739",
    "track": 106.79,
  },
  {
    "alt_baro": 41000,
    "alt_geom": 43500,
    "baro_rate": 0,
    "flight": "SWA4619",
    "gs": 485.6,
    "hex": "ac3751",
    "lat": 32.448725,
    "lon": -87.130943,
    "military": false,
    "seen_pos": 0.33,
    "t": "B38M",
    "track": 129.82,
  },
  {
    "alt_baro": 31000,
    "alt_geom": 33075,
    "baro_rate": -64,
    "flight": "ASH4033",
    "gs": 454.4,
    "hex": "ac2c23",
    "lat": 31.633163,
    "lon": -87.075106,
    "military": false,
    "seen_pos": 0.303,
    "t": "E75L",
    "track": 53.23,
  },
  {
    "alt_baro": 36000,
    "alt_geom": null,
    "baro_rate": null,
    "flight": "AAL2463",
    "gs": null,
    "hex": "a382ca",
    "lat": 27.624802,
    "lon": -87.042294,
    "military": false,
    "seen_pos": 35.269,
    "t": "B38M",
    "track": null,
  },
  {
    "alt_baro": 1425,
    "alt_geom": 1475,
    "baro_rate": 192,
    "flight": "SH185",
    "gs": 151.3,
    "hex": "ae4ea3",
    "lat": 30.712792,
    "lon": -87.037317,
    "military": true,
    "seen_pos": 0.137,
    "t": "TEX2",
    "track": 283.76,
  },
  {
    "alt_baro": 38000,
    "alt_geom": 40425,
    "baro_rate": 0,
    "flight": "SWA4630",
    "gs": 484.8,
    "hex": "abdc78",
    "lat": 33.20776,
    "lon": -87.029656,
    "military": false,
    "seen_pos": 0,
    "t": "B738",
    "track": 184.97,
  },
  {
    "alt_baro": 3475,
    "alt_geom": 3575,
    "baro_rate": 64,
    "flight": "N514RB",
    "gs": 100.7,
    "hex": "a671c4",
    "lat": 30.346287,
    "lon": -86.99491,
    "military": false,
    "seen_pos": 0,
    "t": null,
    "track": 83.16,
  },
  {
    "alt_baro": 36000,
    "alt_geom": 38325,
    "baro_rate": 0,
    "flight": "SWA2888",
    "gs": 427.8,
    "hex": "abd19e",
    "lat": 34.036789,
    "lon": -86.927135,
    "military": false,
    "seen_pos": 0.348,
    "t": "B738",
    "track": 323.08,
  },
  {
    "alt_baro": 29500,
    "alt_geom": 31400,
    "baro_rate": 1088,
    "flight": "DAL903",
    "gs": 464.4,
    "hex": "acc9b2",
    "lat": 34.123675,
    "lon": -86.899853,
    "military": false,
    "seen_pos": 0.102,
    "t": "B739",
    "track": 290.15,
  },
  {
    "alt_baro": 4950,
    "alt_geom": 5200,
    "baro_rate": -128,
    "flight": "DAL3145",
    "gs": 285.3,
    "hex": "ad0373",
    "lat": 33.749405,
    "lon": -86.825007,
    "military": false,
    "seen_pos": 0.496,
    "t": "B712",
    "track": 156.67,
  },
  {
    "alt_baro": 27250,
    "alt_geom": 29025,
    "baro_rate": null,
    "flight": "EJM132",
    "gs": 470.1,
    "hex": "a88d55",
    "lat": 34.367096,
    "lon": -86.732597,
    "military": false,
    "seen_pos": 0.021,
    "t": "CL60",
    "track": 106.82,
  },
  {
    "alt_baro": 10000,
    "alt_geom": 10625,
    "baro_rate": 64,
    "flight": "SH197",
    "gs": 255.1,
    "hex": "ae4eaf",
    "lat": 31.516936,
    "lon": -86.663892,
    "military": true,
    "seen_pos": 0.778,
    "t": "TEX2",
    "track": 178.43,
  },
  {
    "alt_baro": 16100,
    "alt_geom": 16875,
    "baro_rate": null,
    "flight": "N11AW",
    "gs": 246.5,
    "hex": "a029ef",
    "lat": 31.546496,
    "lon": -86.639886,
    "military": false,
    "seen_pos": 0.137,
    "t": "LNP4",
    "track": 356.28,
  },
  {
    "alt_baro": 35000,
    "alt_geom": 37300,
    "baro_rate": 0,
    "flight": "ENY3939",
    "gs": 500.2,
    "hex": "a21839",
    "lat": 32.34915,
    "lon": -86.575909,
    "military": false,
    "seen_pos": 0.011,
    "t": "E75L",
    "track": 133.14,
  },
  {
    "alt_baro": 32000,
    "alt_geom": 34150,
    "baro_rate": 0,
    "flight": "SWA5067",
    "gs": 499.4,
    "hex": "ac252a",
    "lat": 28.610307,
    "lon": -86.456371,
    "military": false,
    "seen_pos": 0.138,
    "t": "B38M",
    "track": 278.41,
  },
  {
    "alt_baro": 4125,
    "alt_geom": 4350,
    "baro_rate": -1600,
    "flight": "DAL2257",
    "gs": 266.3,
    "hex": "a7d276",
    "lat": 33.629883,
    "lon": -86.453434,
    "military": false,
    "seen_pos": 1.589,
    "t": "B712",
    "track": 277.55,
  },
  {
    "alt_baro": 21200,
    "alt_geom": 22550,
    "baro_rate": -1536,
    "flight": "ECJ80",
    "gs": 453.9,
    "hex": "aae2f1",
    "lat": 31.662827,
    "lon": -86.414203,
    "military": false,
    "seen_pos": 0.303,
    "t": "H25B",
    "track": 220.53,
  },
  {
    "alt_baro": 34000,
    "alt_geom": 36275,
    "baro_rate": null,
    "flight": "JIA5230",
    "gs": 472.1,
    "hex": "a6dfbf",
    "lat": 34.028382,
    "lon": -86.412277,
    "military": false,
    "seen_pos": 0.33,
    "t": "CRJ7",
    "track": 231.02,
  },
  {
    "alt_baro": 14150,
    "alt_geom": 15000,
    "baro_rate": null,
    "flight": "JIA5077",
    "gs": 349.4,
    "hex": "a697cf",
    "lat": 33.403093,
    "lon": -86.387796,
    "military": false,
    "seen_pos": 0.328,
    "t": "CRJ7",
    "track": 100.06,
  },
  {
    "alt_baro": 41000,
    "alt_geom": 43450,
    "baro_rate": 0,
    "flight": "SWA286",
    "gs": 476,
    "hex": "abeb57",
    "lat": 34.198391,
    "lon": -86.360493,
    "military": false,
    "seen_pos": 0.121,
    "t": "B738",
    "track": 133.72,
  },
  {
    "alt_baro": 43000,
    "alt_geom": 45450,
    "baro_rate": 0,
    "flight": "EJA941",
    "gs": 436.4,
    "hex": "ad124e",
    "lat": 28.199844,
    "lon": -86.313031,
    "military": false,
    "seen_pos": 0,
    "t": null,
    "track": 288.43,
  },
  {
    "alt_baro": 27475,
    "alt_geom": 29300,
    "baro_rate": 832,
    "flight": "FFT4075",
    "gs": 430.6,
    "hex": "a85c01",
    "lat": 33.336319,
    "lon": -86.306451,
    "military": false,
    "seen_pos": 0,
    "t": "A21N",
    "track": 249.76,
  },
  {
    "alt_baro": 6000,
    "alt_geom": 6250,
    "baro_rate": 0,
    "flight": "N16GH",
    "gs": 119.9,
    "hex": "a0eff3",
    "lat": 34.540504,
    "lon": -86.302929,
    "military": false,
    "seen_pos": 0.245,
    "t": null,
    "track": 172.82,
  },
  {
    "alt_baro": 2975,
    "alt_geom": 3000,
    "baro_rate": -64,
    "flight": "N9791F",
    "gs": 88.2,
    "hex": "ada795",
    "lat": 34.261551,
    "lon": -86.294861,
    "military": false,
    "seen_pos": 0.932,
    "t": "C72R",
    "track": 231.44,
  },
  {
    "alt_baro": 31000,
    "alt_geom": 33050,
    "baro_rate": 0,
    "flight": "AAL1824",
    "gs": 460.1,
    "hex": "a58fdf",
    "lat": 27.84938,
    "lon": -86.211634,
    "military": false,
    "seen_pos": 1.444,
    "t": "A21N",
    "track": 108.24,
  },
  {
    "alt_baro": 625,
    "alt_geom": 600,
    "baro_rate": -1088,
    "flight": "N372AM",
    "gs": 64.9,
    "hex": "a43b45",
    "lat": 30.742905,
    "lon": -86.14913,
    "military": false,
    "seen_pos": 0.3,
    "t": "B407",
    "track": 189.75,
  },
  {
    "alt_baro": 2100,
    "alt_geom": 2150,
    "baro_rate": 32,
    "flight": "SH070",
    "gs": 155,
    "hex": "ae1ecb",
    "lat": 32.24073,
    "lon": -86.144699,
    "military": true,
    "seen_pos": 3.149,
    "t": "TEX2",
    "track": 12,
  },
  {
    "alt_baro": 36000,
    "alt_geom": 38325,
    "baro_rate": 0,
    "flight": "AAL1737",
    "gs": 420.2,
    "hex": "ac1f0e",
    "lat": 32.83168,
    "lon": -86.13078,
    "military": false,
    "seen_pos": 0.229,
    "t": "B738",
    "track": 322.64,
  },
  {
    "alt_baro": 24600,
    "alt_geom": 26150,
    "baro_rate": 1024,
    "flight": "SWA2625",
    "gs": 424.8,
    "hex": "abfd39",
    "lat": 33.849884,
    "lon": -86.103889,
    "military": false,
    "seen_pos": 0.329,
    "t": "B38M",
    "track": 280.99,
  },
  {
    "alt_baro": 32000,
    "alt_geom": 34150,
    "baro_rate": 0,
    "flight": "UAL1213",
    "gs": 493.2,
    "hex": "a83787",
    "lat": 28.506409,
    "lon": -86.078303,
    "military": false,
    "seen_pos": 0.303,
    "t": "B739",
    "track": 279.81,
  },
  {
    "alt_baro": 23550,
    "alt_geom": 25025,
    "baro_rate": 1088,
    "flight": "SWA224",
    "gs": 465.1,
    "hex": "ab628c",
    "lat": 33.690972,
    "lon": -86.05093,
    "military": false,
    "seen_pos": 0.502,
    "t": "B738",
    "track": 276.67,
  },
  {
    "alt_baro": 35000,
    "alt_geom": 37300,
    "baro_rate": 0,
    "flight": "AAL2946",
    "gs": 435.3,
    "hex": "a74679",
    "lat": 28.145157,
    "lon": -86.047507,
    "military": false,
    "seen_pos": 0,
    "t": "A321",
    "track": 105.73,
  },
  {
    "alt_baro": 3100,
    "alt_geom": 3250,
    "baro_rate": null,
    "flight": "N9936W",
    "gs": null,
    "hex": "ade107",
    "lat": 33.052368,
    "lon": -86.016467,
    "military": false,
    "seen_pos": 15.345,
    "t": "P28A",
    "track": null,
  },
  {
    "alt_baro": 22725,
    "alt_geom": 24225,
    "baro_rate": -1024,
    "flight": "DAL3086",
    "gs": 442.5,
    "hex": "ad63f7",
    "lat": 31.772833,
    "lon": -85.91729,
    "military": false,
    "seen_pos": 0,
    "t": null,
    "track": 230.41,
  },
  {
    "alt_baro": 34100,
    "alt_geom": 36400,
    "baro_rate": -960,
    "flight": "AAL2196",
    "gs": 464.5,
    "hex": "acf849",
    "lat": 29.34681,
    "lon": -85.807854,
    "military": false,
    "seen_pos": 0.137,
    "t": "B738",
    "track": 278.79,
  },
  {
    "alt_baro": 5100,
    "alt_geom": 5200,
    "baro_rate": null,
    "flight": "N1701T",
    "gs": 118.7,
    "hex": "a11bba",
    "lat": 32.886782,
    "lon": -85.706476,
    "military": false,
    "seen_pos": 2.334,
    "t": "P28A",
    "track": 102.16,
  },
  {
    "alt_baro": 41000,
    "alt_geom": 43475,
    "baro_rate": 64,
    "flight": "N702AK",
    "gs": 440.2,
    "hex": "a95c06",
    "lat": 27.929387,
    "lon": -85.546364,
    "military": false,
    "seen_pos": 0.121,
    "t": "F2TH",
    "track": 108.27,
  },
  {
    "alt_baro": "ground",
    "alt_geom": null,
    "baro_rate": null,
    "flight": "N8786G",
    "gs": 6.2,
    "hex": "ac1735",
    "lat": 32.612766,
    "lon": -85.438477,
    "military": false,
    "seen_pos": 0.933,
    "t": null,
    "track": null,
  },
  {
    "alt_baro": 18450,
    "alt_geom": 19625,
    "baro_rate": -2432,
    "flight": "DAL797",
    "gs": 443.8,
    "hex": "a78605",
    "lat": 34.118958,
    "lon": -85.316966,
    "military": false,
    "seen_pos": 0.093,
    "t": "B753",
    "track": 107.17,
  },
  {
    "alt_baro": 31000,
    "alt_geom": 33025,
    "baro_rate": 0,
    "flight": "AAL1229",
    "gs": 484.1,
    "hex": "a0cc06",
    "lat": 33.572433,
    "lon": -85.171341,
    "military": false,
    "seen_pos": 0.093,
    "t": "A321",
    "track": 88.58,
  },
  {
    "alt_baro": 2050,
    "alt_geom": 2050,
    "baro_rate": 192,
    "flight": "N830RS",
    "gs": 59,
    "hex": "ab59e2",
    "lat": 33.634094,
    "lon": -85.136812,
    "military": false,
    "seen_pos": 0.722,
    "t": null,
    "track": 359.03,
  },
  {
    "alt_baro": 38000,
    "alt_geom": 40425,
    "baro_rate": 0,
    "flight": "DAL1885",
    "gs": 424.6,
    "hex": "a8e1cc",
    "lat": 31.473404,
    "lon": -84.924155,
    "military": false,
    "seen_pos": 0.024,
    "t": "B752",
    "track": 323.43,
  },
  {
    "alt_baro": 41000,
    "alt_geom": 43425,
    "baro_rate": 0,
    "flight": "SWA572",
    "gs": 477.1,
    "hex": "ac0ff9",
    "lat": 33.094777,
    "lon": -84.904698,
    "military": false,
    "seen_pos": 0.036,
    "t": "B38M",
    "track": 141.04,
  },
  {
    "alt_baro": 38975,
    "alt_geom": 41350,
    "baro_rate": null,
    "flight": "AMX005",
    "gs": 477.4,
    "hex": "0d0ed6",
    "lat": 33.193468,
    "lon": -84.878017,
    "military": false,
    "seen_pos": 0,
    "t": "B789",
    "track": 51.38,
  },
  {
    "alt_baro": 19975,
    "alt_geom": 21300,
    "baro_rate": null,
    "flight": "SUB47",
    "gs": 258.9,
    "hex": "a07cc7",
    "lat": 32.464462,
    "lon": -84.875153,
    "military": false,
    "seen_pos": 0.115,
    "t": "B190",
    "track": 319.54,
  },
  {
    "alt_baro": 35000,
    "alt_geom": 37300,
    "baro_rate": 0,
    "flight": "AAY2723",
    "gs": 488.4,
    "hex": "ab1d2f",
    "lat": 30.790512,
    "lon": -84.855921,
    "military": false,
    "seen_pos": 0.186,
    "t": "B38M",
    "track": 139.07,
  },
  {
    "alt_baro": 1800,
    "alt_geom": 1800,
    "baro_rate": null,
    "flight": "N7262X",
    "gs": 92.4,
    "hex": "a9bc8a",
    "lat": 33.304402,
    "lon": -84.736484,
    "military": false,
    "seen_pos": 0.169,
    "t": "C72R",
    "track": 199.61,
  },
  {
    "alt_baro": 45000,
    "alt_geom": 47375,
    "baro_rate": null,
    "flight": "FTD375",
    "gs": 419.5,
    "hex": "a44660",
    "lat": 30.830057,
    "lon": -84.733759,
    "military": false,
    "seen_pos": 0.137,
    "t": "CL35",
    "track": 327.56,
  },
  {
    "alt_baro": 36000,
    "alt_geom": 38250,
    "baro_rate": 64,
    "flight": "AAL1258",
    "gs": 432.8,
    "hex": "a8b44e",
    "lat": 33.562775,
    "lon": -84.70274,
    "military": false,
    "seen_pos": 0.307,
    "t": "A320",
    "track": 253.49,
  },
  {
    "alt_baro": 9250,
    "alt_geom": 9750,
    "baro_rate": null,
    "flight": "EDV5535",
    "gs": 298.5,
    "hex": "ad01c0",
    "lat": 33.66602,
    "lon": -84.685307,
    "military": false,
    "seen_pos": 0.14,
    "t": "CRJ9",
    "track": 241.37,
  },
  {
    "alt_baro": 10100,
    "alt_geom": 10600,
    "baro_rate": null,
    "flight": "JIA5408",
    "gs": 307,
    "hex": "a6b0d2",
    "lat": 30.515991,
    "lon": -84.642711,
    "military": false,
    "seen_pos": 0.024,
    "t": "CRJ7",
    "track": 143.88,
  },
  {
    "alt_baro": 2575,
    "alt_geom": 2625,
    "baro_rate": 576,
    "flight": "EPI241",
    "gs": 86.7,
    "hex": "a23428",
    "lat": 30.383901,
    "lon": -84.58764,
    "military": false,
    "seen_pos": 0.45,
    "t": null,
    "track": 348.69,
  },
  {
    "alt_baro": 35000,
    "alt_geom": 37300,
    "baro_rate": 0,
    "flight": "AAY997",
    "gs": 485.7,
    "hex": "ab2854",
    "lat": 30.519321,
    "lon": -84.584784,
    "military": false,
    "seen_pos": 0.344,
    "t": null,
    "track": 139.26,
  },
  {
    "alt_baro": 10375,
    "alt_geom": 10825,
    "baro_rate": null,
    "flight": "EDV5059",
    "gs": 274,
    "hex": "a36994",
    "lat": 33.536698,
    "lon": -84.509919,
    "military": false,
    "seen_pos": 0.192,
    "t": "CRJ9",
    "track": 89.58,
  },
  {
    "alt_baro": 12125,
    "alt_geom": 12750,
    "baro_rate": 3008,
    "flight": "DAL2315",
    "gs": 369.3,
    "hex": "a3a155",
    "lat": 33.341225,
    "lon": -84.50308,
    "military": false,
    "seen_pos": 0.254,
    "t": "A321",
    "track": 120.25,
  },
  {
    "alt_baro": 35000,
    "alt_geom": 37300,
    "baro_rate": 0,
    "flight": "AAY1056",
    "gs": 498,
    "hex": "a19ab1",
    "lat": 30.356415,
    "lon": -84.465153,
    "military": false,
    "seen_pos": 0.344,
    "t": "A320",
    "track": 142.67,
  },
  {
    "alt_baro": 38000,
    "alt_geom": 40425,
    "baro_rate": -64,
    "flight": "AAL2025",
    "gs": 447.5,
    "hex": "ab3982",
    "lat": 29.232292,
    "lon": -84.432786,
    "military": false,
    "seen_pos": 0.258,
    "t": "B738",
    "track": 294.56,
  },
  {
    "alt_baro": 35000,
    "alt_geom": 37250,
    "baro_rate": 0,
    "flight": "AAY859",
    "gs": 483.1,
    "hex": "a2e1ce",
    "lat": 33.205353,
    "lon": -84.426251,
    "military": false,
    "seen_pos": 0.516,
    "t": "A320",
    "track": 179.05,
  },
  {
    "alt_baro": 18950,
    "alt_geom": 20100,
    "baro_rate": 1664,
    "flight": "FFT3442",
    "gs": 459,
    "hex": "a4e389",
    "lat": 32.890785,
    "lon": -84.41973,
    "military": false,
    "seen_pos": 0.365,
    "t": "A20N",
    "track": 179.5,
  },
  {
    "alt_baro": 33975,
    "alt_geom": 36150,
    "baro_rate": 0,
    "flight": "FFT2791",
    "gs": 430.7,
    "hex": "a8a391",
    "lat": 33.324326,
    "lon": -84.364238,
    "military": false,
    "seen_pos": 0,
    "t": null,
    "track": 349.16,
  },
  {
    "alt_baro": 425,
    "alt_geom": 375,
    "baro_rate": 896,
    "flight": "EPI254",
    "gs": 74,
    "hex": "a266cc",
    "lat": 30.41551,
    "lon": -84.358905,
    "military": false,
    "seen_pos": 7.564,
    "t": null,
    "track": 0.77,
  },
  {
    "alt_baro": 1050,
    "alt_geom": 1025,
    "baro_rate": -64,
    "flight": "N272MJ",
    "gs": 116.7,
    "hex": "a2af06",
    "lat": 30.087316,
    "lon": -84.344733,
    "military": false,
    "seen_pos": 0.01,
    "t": null,
    "track": 205.91,
  },
  {
    "alt_baro": 36425,
    "alt_geom": 38825,
    "baro_rate": -896,
    "flight": "AAY881",
    "gs": 489.5,
    "hex": "a2602c",
    "lat": 30.021026,
    "lon": -84.275958,
    "military": false,
    "seen_pos": 0.186,
    "t": "A320",
    "track": 155.11,
  },
  {
    "alt_baro": "ground",
    "alt_geom": null,
    "baro_rate": null,
    "flight": "N92ZZ",
    "gs": 0.1,
    "hex": "acbe28",
    "lat": 31.533772,
    "lon": -84.188111,
    "military": false,
    "seen_pos": 7.002,
    "t": "CL35",
    "track": null,
  },
  {
    "alt_baro": 5525,
    "alt_geom": 5725,
    "baro_rate": 0,
    "flight": "N757PM",
    "gs": 110.1,
    "hex": "aa355b",
    "lat": 32.698151,
    "lon": -84.117041,
    "military": false,
    "seen_pos": 0.348,
    "t": null,
    "track": 160.91,
  },
  {
    "alt_baro": 43000,
    "alt_geom": 45400,
    "baro_rate": 0,
    "flight": "EJA553",
    "gs": 463.6,
    "hex": "a70bff",
    "lat": 32.869904,
    "lon": -84.045575,
    "military": false,
    "seen_pos": 0.115,
    "t": "C68A",
    "track": 162.42,
  },
  {
    "alt_baro": 36000,
    "alt_geom": 38325,
    "baro_rate": 64,
    "flight": "SWA1852",
    "gs": 432.8,
    "hex": "ac00d6",
    "lat": 31.649323,
    "lon": -83.985308,
    "military": false,
    "seen_pos": 0.328,
    "t": "B38M",
    "track": 349.08,
  },
  {
    "alt_baro": 36000,
    "alt_geom": 38325,
    "baro_rate": 0,
    "flight": "AAY3152",
    "gs": 422.3,
    "hex": "a2d6a9",
    "lat": 31.480159,
    "lon": -83.935986,
    "military": false,
    "seen_pos": 0.115,
    "t": "A320",
    "track": 337.44,
  },
  {
    "alt_baro": 30000,
    "alt_geom": 31925,
    "baro_rate": 0,
    "flight": "UAL3936",
    "gs": 476.1,
    "hex": "aa8a07",
    "lat": 32.512665,
    "lon": -83.927637,
    "military": false,
    "seen_pos": 0.253,
    "t": "B753",
    "track": 0.96,
  },
  {
    "alt_baro": 26975,
    "alt_geom": 28725,
    "baro_rate": 64,
    "flight": "AAL2401",
    "gs": 454,
    "hex": "ad1c11",
    "lat": 29.584459,
    "lon": -83.910181,
    "military": false,
    "seen_pos": 0.095,
    "t": "B738",
    "track": 135.89,
  },
  {
    "alt_baro": 32000,
    "alt_geom": 34100,
    "baro_rate": 0,
    "flight": "SWA4964",
    "gs": 460.2,
    "hex": "ac24c5",
    "lat": 30.172073,
    "lon": -83.815074,
    "military": false,
    "seen_pos": 0.024,
    "t": "B38M",
    "track": 323.93,
  },
  {
    "alt_baro": 30775,
    "alt_geom": 32750,
    "baro_rate": 1088,
    "flight": "DAL1107",
    "gs": 485.1,
    "hex": "a8de10",
    "lat": 32.051788,
    "lon": -83.807281,
    "military": false,
    "seen_pos": 0.144,
    "t": "B752",
    "track": 162.24,
  },
  {
    "alt_baro": 35650,
    "alt_geom": 37975,
    "baro_rate": -896,
    "flight": "DAL1057",
    "gs": 481.8,
    "hex": "ac85ce",
    "lat": 29.586368,
    "lon": -83.743394,
    "military": false,
    "seen_pos": 0.3,
    "t": "B739",
    "track": 150.67,
  },
  {
    "alt_baro": 38000,
    "alt_geom": 40425,
    "baro_rate": -64,
    "flight": "SWA3621",
    "gs": 422.2,
    "hex": "ac7283",
    "lat": 31.023761,
    "lon": -83.710822,
    "military": false,
    "seen_pos": 0.186,
    "t": null,
    "track": 337.14,
  },
  {
    "alt_baro": 27000,
    "alt_geom": 28800,
    "baro_rate": 0,
    "flight": "JWZ790",
    "gs": 477.5,
    "hex": "aab9a8",
    "lat": 29.802463,
    "lon": -83.604072,
    "military": false,
    "seen_pos": 0.338,
    "t": "LJ60",
    "track": 157.46,
  },
  {
    "alt_baro": 38000,
    "alt_geom": 40400,
    "baro_rate": 0,
    "flight": "FFT1713",
    "gs": 424,
    "hex": "a3b414",
    "lat": 30.787648,
    "lon": -83.594916,
    "military": false,
    "seen_pos": 0.375,
    "t": "A20N",
    "track": 337.24,
  },
  {
    "alt_baro": 23800,
    "alt_geom": 25350,
    "baro_rate": 704,
    "flight": "DAL1733",
    "gs": 515.2,
    "hex": "a402dd",
    "lat": 31.891355,
    "lon": -83.570588,
    "military": false,
    "seen_pos": 0,
    "t": "A321",
    "track": 160.97,
  },
  {
    "alt_baro": 34000,
    "alt_geom": 36200,
    "baro_rate": 0,
    "flight": "UAL1997",
    "gs": 437.4,
    "hex": "aa7e2e",
    "lat": 30.674294,
    "lon": -83.539984,
    "military": false,
    "seen_pos": 0,
    "t": "B738",
    "track": 337.13,
  },
  {
    "alt_baro": 36025,
    "alt_geom": 38350,
    "baro_rate": 0,
    "flight": "JBU863",
    "gs": 429.1,
    "hex": "a85ff5",
    "lat": 30.240692,
    "lon": -83.308895,
    "military": false,
    "seen_pos": 0.3,
    "t": "A320",
    "track": 336.66,
  },
]
`;
